Add chapter from 6.4 to end
Signed-off-by: Li Xi <lixi@ddn.com>

--- a/03.1-Monitoring a Lustre File System.md
+++ b/03.1-Monitoring a Lustre File System.md
@@ -6,7 +6,7 @@ This chapter provides information on monitoring a Lustre file system and include
 
 ## Lustre Changelogs
 
-[Working with Changelogs](ch12s01s01.html)[Audit with Changelogs](ch12s01s03.html)L 2.11The changelogs feature records events that change the file system namespace or file metadata. Changes such as file creation, deletion, renaming, attribute changes, etc. are recorded with the target and parent file identifiers (FIDs), the name of the target, a timestamp, and user information. These records can be used for a variety of purposes:
+The changelogs feature records events that change the file system namespace or file metadata. Changes such as file creation, deletion, renaming, attribute changes, etc. are recorded with the target and parent file identifiers (FIDs), the name of the target, a timestamp, and user information. These records can be used for a variety of purposes:
 
 - Capture recent changes to feed into an archiving system.
 - Use changelog entries to exactly replicate changes in a file system mirror.
@@ -45,7 +45,7 @@ Changelogs record types are:
 
 ** Note**
 
-Event types marked with * are not recorded by default. Refer to [the section called “Setting the Changelog Mask”](dbdoclet.modifyChangelogMask.html) for instructions on modifying the Changelogs mask.
+Event types marked with * are not recorded by default. Refer to *the section called “Setting the Changelog Mask”* for instructions on modifying the Changelogs mask.
 
 FID-to-full-pathname and pathname-to-FID functions are also included to map target and parent FIDs into the file system namespace.
 
