--- a/03.14-Configuring and Managing Quotas.md
+++ b/03.14-Configuring and Managing Quotas.md
@@ -26,7 +26,7 @@ Although a quota feature is available in the Lustre software, root quotas are NO
 
 ## Enabling Disk Quotas
 
-The design of quotas on Lustre has management and enforcement separated from resource usage and accounting. Lustre software is responsible for management and enforcement. The back-end file system is responsible for resource usage and accounting. Because of this, it is necessary to begin enabling quotas by enabling quotas on the back-end disk system. Because quota setup is dependent on the Lustre software version in use, you may first need to run `lctl get_param version` to identify [which version?](pr01s02.html#whichversion) you are currently using.
+The design of quotas on Lustre has management and enforcement separated from resource usage and accounting. Lustre software is responsible for management and enforcement. The back-end file system is responsible for resource usage and accounting. Because of this, it is necessary to begin enabling quotas by enabling quotas on the back-end disk system. Because quota setup is dependent on the Lustre software version in use, you may first need to run `lctl get_param version` to identify *which version?* you are currently using.
 
 
 
@@ -58,11 +58,11 @@ Once setup, verification of the quota state must be performed on the MDT. Althou
 
 Lustre file systems formatted with a Lustre release prior to 2.4.0 can be still safely upgraded to release 2.4.0, but will not have functional space usage report until `tunefs.lustre --quota` is run against all targets. This command sets the QUOTA feature flag in the superblock and runs e2fsck (as a result, the target must be offline) to build the per-UID/GID disk usage database.
 
-Introduced in Lustre 2.10Lustre filesystems formatted with a Lustre release prior to 2.10 can be still safely upgraded to release 2.10, but will not have project quota usage reporting functional until `tune2fs -O project` is run against all ldiskfs backend targets. This command sets the PROJECT feature flag in the superblock and runs e2fsck (as a result, the target must be offline). See [the section called “ Quotas and Version Interoperability”](quota_interoperability.html) for further important considerations.
+Introduced in Lustre 2.10Lustre filesystems formatted with a Lustre release prior to 2.10 can be still safely upgraded to release 2.10, but will not have project quota usage reporting functional until `tune2fs -O project` is run against all ldiskfs backend targets. This command sets the PROJECT feature flag in the superblock and runs e2fsck (as a result, the target must be offline). See *the section called “ Quotas and Version Interoperability”* for further important considerations.
 
 **Caution**
 
-Lustre software release 2.4 and later requires a version of e2fsprogs that supports quota (i.e. newer or equal to 1.42.13.wc5, 1.42.13.wc6 or newer is needed for project quota support) to be installed on the server nodes using ldiskfs backend (e2fsprogs is not needed with ZFS backend). In general, we recommend to use the latest e2fsprogs version available on[http://downloads.whamcloud.com/public/e2fsprogs/](http://downloads.whamcloud.com/e2fsprogs/).
+Lustre software release 2.4 and later requires a version of e2fsprogs that supports quota (i.e. newer or equal to 1.42.13.wc5, 1.42.13.wc6 or newer is needed for project quota support) to be installed on the server nodes using ldiskfs backend (e2fsprogs is not needed with ZFS backend). In general, we recommend to use the latest e2fsprogs version available on [http://downloads.whamcloud.com/public/e2fsprogs/](http://downloads.whamcloud.com/e2fsprogs/).
 
 The ldiskfs OSD relies on the standard Linux quota to maintain accounting information on disk. As a consequence, the Linux kernel running on the Lustre servers using ldiskfs backend must have`CONFIG_QUOTA`, `CONFIG_QUOTACTL` and `CONFIG_QFMT_V2` enabled.
 
@@ -240,9 +240,9 @@ lctl get_param osd-*.*.quota_slave.limit*
 
 Prior to 2.4, global quota limits used to be stored in administrative quota files using the on-disk format of the linux quota file. When upgrading MDT0000 to 2.4, those administrative quota files are converted into IAM indexes automatically, conserving existing quota limits previously set by the administrator.
 
-------
 
- Quota Allocation
+
+## Quota Allocation
 
 In a Lustre file system, quota must be properly allocated or users may experience unnecessary failures. The file system block quota is divided up among the OSTs within the file system. Each OST requests an allocation which is increased up to the quota limit. The quota allocation is then quantized to reduce the number of quota-related request traffic.
 
@@ -283,7 +283,7 @@ It is very important to note that the block quota is consumed per OST and the in
 
 Setting the quota limit below the minimal qunit size may prevent the user/group from all file creation. It is thus recommended to use soft/hard limits which are a multiple of the number of OSTs * the minimal qunit size.
 
-To determine the total number of inodes, use `lfs df -i`(and also `lctl get_param *.*.filestotal`). For more information on using the `lfs df -i` command and the command output, see [the section called “Checking File System Free Space”](dbdoclet.checking_free_space.html).
+To determine the total number of inodes, use `lfs df -i`(and also `lctl get_param *.*.filestotal`). For more information on using the `lfs df -i` command and the command output, see *the section called “Checking File System Free Space”*.
 
 Unfortunately, the `statfs` interface does not report the free inode count directly, but instead reports the total inode and used inode counts. The free inode count is calculated for `df` from (total inodes - used inodes). It is not critical to know the total inode count for a file system. Instead, you should know (accurately), the free inode count and the used inode count for a file system. The Lustre software manipulates the total inode count in order to accurately report the other two values.
 
