--- a/03.16-Mapping UIDs and GIDs with Nodemap.md
+++ b/03.16-Mapping UIDs and GIDs with Nodemap.md
@@ -107,7 +107,7 @@ drwxr-xr-x 3 root root     4096 Jul 23 09:02 ..
 -rw-r--r-- 1 11003 11001 25100288 Jul 23 09:06 merlin-file
 ```
 
-If UID 11002 or GID 11001 do not exist on the Lustre MDS or MGS, create them in LDAP or other data sources, or trust clients by setting `identity_upcall` to `NONE`. For more information, see [the section called “User/Group Upcall”](dbdoclet.identity_upcall.html).
+If UID 11002 or GID 11001 do not exist on the Lustre MDS or MGS, create them in LDAP or other data sources, or trust clients by setting `identity_upcall` to `NONE`. For more information, see *the section called “User/Group Upcall”*.
 
 Building a larger and more complex configuration is possible by iterating through the `lctl` commands above. In short:
 
