--- a/03.17-Configuring Shared-Secret Key (SSK) Security.md
+++ b/03.17-Configuring Shared-Secret Key (SSK) Security.md
@@ -170,7 +170,7 @@ SSK key files are a collection of attributes formatted as fixed length values an
 
 - **MGS NIDs** - Comma-separated list of MGS NIDs. Only required when `mgssec` is used (Default: "").
 
-- **Nodemap name** - Nodemap name for key (Default: "default"). See [the section called “Role of Nodemap in SSK”](ssknodemaprole.html)
+- **Nodemap name** - Nodemap name for key (Default: "default"). See *the section called “Role of Nodemap in SSK”*
 
 - **Shared key** - Shared secret used by all SSK flavors to provide authentication.
 
@@ -479,7 +479,7 @@ There currently does not exist a mechanism to flush contexts from Lustre. Target
 
 ## Role of Nodemap in SSK
 
-SSK uses Nodemap (See [*Mapping UIDs and GIDs with Nodemap*](lustrenodemap.html)) policy group names and their associated NID range(s) as a mechanism to prevent key file forgery, and to control the range of NIDs on which a given key file can be used.
+SSK uses Nodemap (See *Mapping UIDs and GIDs with Nodemap*) policy group names and their associated NID range(s) as a mechanism to prevent key file forgery, and to control the range of NIDs on which a given key file can be used.
 
 Clients assume they are in the nodemap specified in the key file they use. When clients instantiate security contexts an upcall is triggered that specifies information about the context that triggers it. From this context information `request-key` calls `lgss_keyring`, which in turn looks up the key with description lustre:*fsname* or lustre:*target_name* for the MGC. Using the key found in the user keyring matching the description, the nodemap name is read from the key, hashed with SHA256, and sent to the server.
 
@@ -493,7 +493,7 @@ The examples in this section use 1 MGS/MDS (NID 172.16.0.1@tcp), 1 OSS (NID 172.
 
 ### Securing Client to Server Communications
 
-This example illustrates how to configure SSK to apply Privacy and Integrity protections to client-to-server PtlRPC traffic on the `tcp` network. Rules that specify a direction, specifically `cli2mdt` and `cli2ost`, are used. This permits server-to-server communications to continue using `null` which is the *default* flavor for all Lustre connections. This arrangement provides no server-to-server protections, see [the section called “Securing Server to Server Communications”](ssks2sexample.html).
+This example illustrates how to configure SSK to apply Privacy and Integrity protections to client-to-server PtlRPC traffic on the `tcp` network. Rules that specify a direction, specifically `cli2mdt` and `cli2ost`, are used. This permits server-to-server communications to continue using `null` which is the *default* flavor for all Lustre connections. This arrangement provides no server-to-server protections, see *the section called “Securing Server to Server Communications”*.
 
 1. Create secure directory for storing SSK key files.
 
@@ -577,7 +577,7 @@ This example illustrates how to configure SSK to apply Privacy and Integrity pro
     client2# mount -t lustre -o skpath=/secure_directory 172.16.0.1@tcp:/testfs /mnt/testfs
     ```
 
-13. Verify that the `mdc` and `osc` connections are using the SSK mechanism and that `rpc` and `bulk` security flavors are `skpi`. See [the section called “Viewing Secure PtlRPC Contexts”](ssksptlrpcctx.html).
+13. Verify that the `mdc` and `osc` connections are using the SSK mechanism and that `rpc` and `bulk` security flavors are `skpi`. See *the section called “Viewing Secure PtlRPC Contexts”*.
 
     Notice the `mgc` connection to the MGS has no secure PtlRPC security context. This is because `skpi` security was only specified for client-to-MDT and client-to-OST connections in step 10. The following example details the steps necessary to secure the connection to the MGS.
 
@@ -611,7 +611,7 @@ This example builds on the previous example.
    cli1# mount -t lustre -o mgssec=skpi,skpath=/secure_directory 172.16.0.1@tcp:/testfs /mnt/testfs
    ```
 
-6. Verify that client1’s MGC connection is using the SSK mechanism and `skpi` security flavor. See [the section called “Viewing Secure PtlRPC Contexts”](ssksptlrpcctx.html).
+6. Verify that client1’s MGC connection is using the SSK mechanism and `skpi` security flavor. See *the section called “Viewing Secure PtlRPC Contexts”*.
 
 ### Securing Server to Server Communications
 
@@ -671,7 +671,7 @@ This example builds on the previous example.
    mds# lctl conf_param testfs.srpc.flavor.tcp.mdt2ost=ski
    ```
 
-9. Verify that the `osc` and `osp` connections to the OST have a secure `ski` security context. See [the section called “Viewing Secure PtlRPC Contexts”](ssksptlrpcctx.html).
+9. Verify that the `osc` and `osp` connections to the OST have a secure `ski` security context. See *the section called “Viewing Secure PtlRPC Contexts”*.
 
 ## Viewing Secure PtlRPC Contexts
 
