--- a/03.18-Managing Security in a Lustre File System.md
+++ b/03.18-Managing Security in a Lustre File System.md
@@ -105,14 +105,14 @@ The root squash feature works by re-mapping the user ID (UID) and group ID (GID)
 
 **Note**
 
-Nodemaps ([*Mapping UIDs and GIDs with Nodemap*](lustrenodemap.html#lustrenodemap.title)) are an alternative to root squash, since it also allows root squash on a per-client basis. With UID maps, the clients can even have a local root UID without actually having root access to the filesystem itself.
+Nodemaps (*Mapping UIDs and GIDs with Nodemap*) are an alternative to root squash, since it also allows root squash on a per-client basis. With UID maps, the clients can even have a local root UID without actually having root access to the filesystem itself.
 
 ### Configuring Root Squash
 
 Root squash functionality is managed by two configuration parameters, `root_squash` and `nosquash_nids`.
 
 - The `root_squash` parameter specifies the UID and GID with which the root user accesses the Lustre file system.
-- The `nosquash_nids` parameter specifies the set of clients to which root squash does not apply. LNet NID range syntax is used for this parameter (see the NID range syntax rules described in [the section called “Using Root Squash”](managingSecurity.root_squash.html)). For example:
+- The `nosquash_nids` parameter specifies the set of clients to which root squash does not apply. LNet NID range syntax is used for this parameter (see the NID range syntax rules described in *the section called “Using Root Squash”*). For example:
 
 ```
 nosquash_nids=172.16.245.[0-255/2]@tcp
@@ -243,11 +243,11 @@ For networks using numeric addresses (e.g. elan), the address range must be spec
 
 Isolation is the Lustre implementation of the generic concept of multi-tenancy, which aims at providing separated namespaces from a single filesystem. Lustre Isolation enables different populations of users on the same file system beyond normal Unix permissions/ACLs, even when users on the clients may have root access. Those tenants share the same file system, but they are isolated from each other: they cannot access or even see each other’s files, and are not aware that they are sharing common file system resources.
 
-Lustre Isolation leverages the Fileset feature ([the section called “Fileset Feature”](SystemConfigurationUtilities.fileset.html)) to mount only a subdirectory of the filesystem rather than the root directory. In order to achieve isolation, the subdirectory mount, which presents to tenants only their own fileset, has to be imposed to the clients. To that extent, we make use of the nodemap feature ([*Mapping UIDs and GIDs with Nodemap*](lustrenodemap.html#lustrenodemap.title)). We group all clients used by a tenant under a common nodemap entry, and we assign to this nodemap entry the fileset to which the tenant is restricted.
+Lustre Isolation leverages the Fileset feature (*the section called “Fileset Feature”*) to mount only a subdirectory of the filesystem rather than the root directory. In order to achieve isolation, the subdirectory mount, which presents to tenants only their own fileset, has to be imposed to the clients. To that extent, we make use of the nodemap feature (*Mapping UIDs and GIDs with Nodemap*). We group all clients used by a tenant under a common nodemap entry, and we assign to this nodemap entry the fileset to which the tenant is restricted.
 
 ### Identifying Clients
 
-Enforcing multi-tenancy on Lustre relies on the ability to properly identify the client nodes used by a tenant, and trust those identities. This can be achieved by having physical hardware and/or network security, so that client nodes have well-known NIDs. It is also possible to make use of strong authentication with Kerberos or Shared-Secret Key (see [*Configuring Shared-Secret Key (SSK) Security*](lustressk.html)). Kerberos prevents NID spoofing, as every client needs its own credentials, based on its NID, in order to connect to the servers. Shared-Secret Key also prevents tenant impersonation, because keys can be linked to a specific nodemap. See [the section called “Role of Nodemap in SSK”](ssknodemaprole.html) for detailed explanations.
+Enforcing multi-tenancy on Lustre relies on the ability to properly identify the client nodes used by a tenant, and trust those identities. This can be achieved by having physical hardware and/or network security, so that client nodes have well-known NIDs. It is also possible to make use of strong authentication with Kerberos or Shared-Secret Key (see *Configuring Shared-Secret Key (SSK) Security*). Kerberos prevents NID spoofing, as every client needs its own credentials, based on its NID, in order to connect to the servers. Shared-Secret Key also prevents tenant impersonation, because keys can be linked to a specific nodemap. See *the section called “Role of Nodemap in SSK”* for detailed explanations.
 
 ### Configuring Isolation
 
@@ -330,7 +330,7 @@ To delete the `sepol` parameter, just set it to an empty string:
 mgs# lctl nodemap_set_sepol --name restricted --sepol ''
 ```
 
-See [*Mapping UIDs and GIDs with Nodemap*](lustrenodemap.html#lustrenodemap.title) for more details about the Nodemap feature.
+See *Mapping UIDs and GIDs with Nodemap* for more details about the Nodemap feature.
 
 ### Making SELinux Policy Check Permanent
 
