--- a/03.2-Lustre Operations.md
+++ b/03.2-Lustre Operations.md
@@ -84,11 +84,11 @@ In general, it is wise to specify noauto and let your high-availability (HA) pac
 
 We are mounting by disk label here. The label of a device can be read with `e2label`. The label of a newly-formatted Lustre server may end in `FFFF` if the `--index` option is not specified to `mkfs.lustre`, meaning that it has yet to be assigned. The assignment takes place when the server is first started, and the disk label is updated. It is recommended that the `--index` option always be used, which will also ensure that the label is set at format time.
 
-### Caution
+**Caution**
 
 Do not do this when the client and OSS are on the same node, as memory pressure between the client and OSS can lead to deadlocks.
 
-### Caution
+**Caution**
 
 Mount-by-label should NOT be used in a multi-path environment.
 
@@ -98,7 +98,7 @@ Mount-by-label should NOT be used in a multi-path environment.
 
 A complete Lustre filesystem shutdown occurs by unmounting all clients and servers in the order shown below. Please note that unmounting a block device causes the Lustre software to be shut down on that node.
 
-### Note
+**Note**
 
 Please note that the `-a -t lustre` in the commands below is not the name of a filesystem, but rather is specifying to unmount all entries in /etc/mtab that are of type `lustre`
 
@@ -158,7 +158,7 @@ Please note that the `-a -t lustre` in the commands below is not the name of a f
    [155336.556752] Lustre: server umount testfs-OST0002 complete
    ```
 
-For unmount command syntax for a single OST, MDT, or MGT target please refer to [the section called “ Unmounting a Specific Target on a Server”](dbdoclet.umountTarget.html)
+For unmount command syntax for a single OST, MDT, or MGT target please refer to *the section called “ Unmounting a Specific Target on a Server”*
 
 ## Unmounting a Specific Target on a Server
 
@@ -176,7 +176,7 @@ Gracefully stopping a server with the `umount` command preserves the state of th
 
 If the force ( `-f`) flag is used, then the server evicts all clients and stops WITHOUT recovery. Upon restart, the server does not wait for recovery. Any currently connected clients receive I/O errors until they reconnect.
 
-### Note
+**Note**
 
 If you are using loopback devices, use the `-d` flag. This flag cleans up loop devices and can always be safely specified.
 
@@ -205,11 +205,11 @@ oss# mkfs.lustre --fsname=testfs --mgsnode=mds0 --param=failover.mode=failout
       --ost --index=3 /dev/sdb 
 ```
 
-### Caution
+**Caution**
 
 Before running this command, unmount all OSTs that will be affected by a change in `failover`/ `failout` mode.
 
-### Note
+**Note**
 
 After initial file system configuration, use the `tunefs.lustre` utility to change the mode. For example, to set the `failout` mode, run:
 
@@ -259,7 +259,7 @@ mkfs.lustre --fsname=
 file_system_name
 ```
 
-### Note
+**Note**
 
 The MDT, OSTs and clients in the new file system must use the same file system name (prepended to the device name). For example, for a new file system named `foo`, the MDT and two OSTs would be named `foo-MDT0000`, `foo-OST0000`, and `foo-OST0001`.
 
@@ -278,11 +278,11 @@ For example, to mount a client on file system foo at mount point /mnt/foo, run:
 client# mount -t lustre mgsnode:/foo /mnt/foo
 ```
 
-### Note
+**Note**
 
 If a client(s) will be mounted on several file systems, add the following line to `/etc/xattr.conf` file to avoid problems when files are moved between the file systems: `lustre.* skip`
 
-### Note
+**Note**
 
 To ensure that a new MDT is added to an existing MGS create the MDT by specifying: `--mdt --mgsnode= *mgs_NID*`.
 
@@ -332,7 +332,7 @@ client# lfs mkdir –i
 
 This command will allocate the sub-directory `remote_dir` onto the MDT of index `mdt_index`. For more information on adding additional MDTs and `mdt_index` see [2]
 
-### Warning
+**Warning**
 
 An administrator can allocate remote sub-directories to separate MDTs. Creating remote sub-directories in parent directories not hosted on MDT0 is not recommended. This is because the failure of the parent MDT will leave the namespace below it inaccessible. For this reason, by default it is only possible to create remote sub-directories off MDT0. To relax this restriction and enable remote sub-directories off any MDT, an administrator must issue the following command on the MGS:
 
@@ -360,7 +360,7 @@ Introduced in Lustre 2.8With Lustre software version 2.8, a new tunable is avail
 
 
 
-The Lustre 2.8 DNE feature enables individual files in a given directory to store their metadata on separate MDTs (a *striped directory*) once additional MDTs have been added to the filesystem, see [the section called “Adding a New MDT to a Lustre File System”](dbdoclet.adding_new_mdt.html). The result of this is that metadata requests for files in a striped directory are serviced by multiple MDTs and metadata service load is distributed over all the MDTs that service a given directory. By distributing metadata service load over multiple MDTs, performance can be improved beyond the limit of single MDT performance. Prior to the development of this feature all files in a directory must record their metadata on a single MDT.
+The Lustre 2.8 DNE feature enables individual files in a given directory to store their metadata on separate MDTs (a *striped directory*) once additional MDTs have been added to the filesystem, see *the section called “Adding a New MDT to a Lustre File System”*. The result of this is that metadata requests for files in a striped directory are serviced by multiple MDTs and metadata service load is distributed over all the MDTs that service a given directory. By distributing metadata service load over multiple MDTs, performance can be improved beyond the limit of single MDT performance. Prior to the development of this feature all files in a directory must record their metadata on a single MDT.
 
 This command to stripe a directory over *mdt_count* MDTs is:
 
@@ -376,9 +376,9 @@ The striped directory feature is most useful for distributing single large direc
 
 Several options are available for setting parameters in Lustre:
 
-- When creating a file system, use mkfs.lustre. See [the section called “Setting Tunable Parameters with `mkfs.lustre`”](dbdoclet.50438194_17237.html)below.
-- When a server is stopped, use tunefs.lustre. See [the section called “Setting Parameters with `tunefs.lustre`”](dbdoclet.50438194_55253.html)below.
-- When the file system is running, use lctl to set or retrieve Lustre parameters. See [the section called “Setting Parameters with `lctl`”](dbdoclet.50438194_51490.html)and [the section called “Reporting Current Parameter Values”](dbdoclet.50438194_63247.html)below.
+- When creating a file system, use mkfs.lustre. See *the section called “Setting Tunable Parameters with `mkfs.lustre`”*below.
+- When a server is stopped, use tunefs.lustre. See *the section called “Setting Parameters with `tunefs.lustre`”* below.
+- When the file system is running, use lctl to set or retrieve Lustre parameters. See *the section called “Setting Parameters with `lctl`”* and *the section called “Reporting Current Parameter Values”* below.
 
 ### Setting Tunable Parameters with `mkfs.lustre`
 
@@ -388,7 +388,7 @@ When the file system is first formatted, parameters can simply be added as a `--
 mds# mkfs.lustre --mdt --param="sys.timeout=50" /dev/sda
 ```
 
-For more details about creating a file system,see [*Configuring a Lustre File System*](configuringlustre.html). For more details about `mkfs.lustre`, see [*System Configuration Utilities*](systemconfigurationutilities.html).
+For more details about creating a file system,see *Configuring a Lustre File System*. For more details about `mkfs.lustre`, see *System Configuration Utilities*.
 
 ### Setting Parameters with `tunefs.lustre`
 
@@ -411,13 +411,13 @@ The tunefs.lustre command can be used to set any parameter settable via `lctl co
 mds# tunefs.lustre --param mdt.identity_upcall=NONE /dev/sda1
 ```
 
-For more details about `tunefs.lustre`, see [*System Configuration Utilities*](systemconfigurationutilities.html).
+For more details about `tunefs.lustre`, see *System Configuration Utilities*.
 
 ### Setting Parameters with `lctl`
 
 When the file system is running, the `lctl` command can be used to set parameters (temporary or permanent) and report current parameter values. Temporary parameters are active as long as the server or client is not shut down. Permanent parameters live through server and client reboots.
 
-### Note
+**Note**
 
 The `lctl list_param` command enables users to list all parameters that can be set. See [the section called “Listing Parameters”](dbdoclet.50438194_88217.html).
 
@@ -469,7 +469,7 @@ $ lctl conf_param testfs-OST0000.ost.client_cache_seconds=15
 $ lctl conf_param testfs.sys.timeout=40 
 ```
 
-### Caution
+**Caution**
 
 Parameters specified with the `lctl conf_param` command are set permanently in the file system's configuration file on the MGS.
 
@@ -595,7 +595,7 @@ mds1# lctl get_param mdt.testfs-MDT0000.recovery_status
 
 Where multiple NIDs are specified separated by commas (for example, `10.67.73.200@tcp,192.168.10.1@tcp`), the two NIDs refer to the same host, and the Lustre software chooses the *best* one for communication. When a pair of NIDs is separated by a colon (for example, `10.67.73.200@tcp:10.67.73.201@tcp`), the two NIDs refer to two different hosts and are treated as a failover pair (the Lustre software tries the first one, and if that fails, it tries the second one.)
 
-Two options to `mkfs.lustre` can be used to specify failover nodes. Introduced in Lustre software release 2.0, the `--servicenode` option is used to specify all service NIDs, including those for primary nodes and failover nodes. When the `--servicenode`option is used, the first service node to load the target device becomes the primary service node, while nodes corresponding to the other specified NIDs become failover locations for the target device. An older option, `--failnode`, specifies just the NIDS of failover nodes. For more information about the `--servicenode` and `--failnode` options, see [*Configuring Failover in a Lustre File System*](configuringfailover.html).
+Two options to `mkfs.lustre` can be used to specify failover nodes. Introduced in Lustre software release 2.0, the `--servicenode` option is used to specify all service NIDs, including those for primary nodes and failover nodes. When the `--servicenode`option is used, the first service node to load the target device becomes the primary service node, while nodes corresponding to the other specified NIDs become failover locations for the target device. An older option, `--failnode`, specifies just the NIDS of failover nodes. For more information about the `--servicenode` and `--failnode` options, see *Configuring Failover in a Lustre File System*.
 
 ## Erasing a File System
 
@@ -630,7 +630,7 @@ To set the `writeconf` flag on the MDT:
    /dev/mds_device
    ```
 
-### Note
+**Note**
 
 If you have a combined MGS/MDT, reformatting the MDT reformats the MGS as well, causing all configuration information to be lost; you can start building your new file system. Nothing needs to be done with old disks that will not be part of the new file system, just do not mount them.
 
@@ -645,13 +645,13 @@ tune2fs [-m reserved_blocks_percent] /dev/
 
 You do not need to shut down Lustre before running this command or restart it afterwards.
 
-### Warning
+**Warning**
 
 Reducing the space reservation can cause severe performance degradation as the OST file system becomes more than 95% full, due to difficulty in locating large areas of contiguous free space. This performance degradation may persist even if the space usage drops below 95% again. It is recommended NOT to reduce the reserved disk space below 5%.
 
 ## Replacing an Existing OST or MDT
 
-To copy the contents of an existing OST to a new OST (or an old MDT to a new MDT), follow the process for either OST/MDT backups in [the section called “ Backing Up and Restoring an MDT or OST (ldiskfs Device Level)”](dbdoclet.backup_device.html)or [the section called “ Backing Up an OST or MDT (Backend File System Level)”](backup_fs_level.html). For more information on removing a MDT, see [the section called “Removing an MDT from the File System”](dbdoclet.rmremotedir.html).
+To copy the contents of an existing OST to a new OST (or an old MDT to a new MDT), follow the process for either OST/MDT backups in *the section called “ Backing Up and Restoring an MDT or OST (ldiskfs Device Level)”*or *the section called “ Backing Up an OST or MDT (Backend File System Level)”*. For more information on removing a MDT, see *the section called “Removing an MDT from the File System”*.
 
 ## Identifying To Which Lustre File an OST Object Belongs
 
@@ -711,10 +711,10 @@ Use this procedure to identify the file containing a given object on a given OST
 
 The command lists the inode and pathname associated with the object.
 
-### Note
+**Note**
 
 `Debugfs`' ''ncheck'' is a brute-force search that may take a long time to complete.
 
-### Note
+**Note**
 
 To find the Lustre file from a disk LBA, follow the steps listed in the document at this URL: <http://smartmontools.sourceforge.net/badblockhowto.html>. Then, follow the steps above to resolve the Lustre filename.
