--- a/03.3-Lustre Maintenance.md
+++ b/03.3-Lustre Maintenance.md
@@ -4,27 +4,24 @@
 
 Once you have the Lustre file system up and running, you can use the procedures in this section to perform these basic Lustre maintenance tasks:
 
-
-
-- [the section called “ Working with Inactive OSTs”](dbdoclet.50438199_42877.html)
-- [the section called “ Finding Nodes in the Lustre File System”](dbdoclet.50438199_15240.html)
-- [the section called “ Mounting a Server Without Lustre Service”](dbdoclet.50438199_26070.html)
-- [the section called “ Regenerating Lustre Configuration Logs”](dbdoclet.50438199_54623.html)
-- [the section called “ Changing a Server NID”](dbdoclet.changingservernid.html)
-- [the section called “Adding a New MDT to a Lustre File System”](dbdoclet.adding_new_mdt.html)
-- [the section called “ Adding a New OST to a Lustre File System”](dbdoclet.adding_new_ost.html)
-- [the section called “ Removing and Restoring MDTs and OSTs”](dbdoclet.deactivating_mdt_ost.html)
-- [the section called “Removing an MDT from the File System”](dbdoclet.rmremotedir.html)
-- [the section called “ Working with Inactive MDTs”](dbdoclet.inactivemdt.html)
-- [the section called “Removing an OST from the File System”](section_remove_ost.html)
-- [the section called “ Backing Up OST Configuration Files”](section_ydg_pgt_tl.html)
-- [the section called “ Restoring OST Configuration Files”](section_restore_ost.html)
-- [the section called “Returning a Deactivated OST to Service”](section_ucf_qgt_tl.html)
-- [the section called “ Aborting Recovery”](dbdoclet.50438199_77819.html)
-- [the section called “ Determining Which Machine is Serving an OST ”](dbdoclet.50438199_12607.html)
-- [the section called “ Changing the Address of a Failover Node”](dbdoclet.50438199_62333.html)
-- [the section called “ Separate a combined MGS/MDT”](dbdoclet.50438199_62545.html)
-
+- the section called “ Working with Inactive OSTs”
+- the section called “ Finding Nodes in the Lustre File System”
+- the section called “ Mounting a Server Without Lustre Service”
+- the section called “ Regenerating Lustre Configuration Logs”
+- the section called “ Changing a Server NID”
+- the section called “Adding a New MDT to a Lustre File System”
+- the section called “ Adding a New OST to a Lustre File System”
+- the section called “ Removing and Restoring MDTs and OSTs”
+- the section called “Removing an MDT from the File System”
+- the section called “ Working with Inactive MDTs”
+- the section called “Removing an OST from the File System”
+- the section called “ Backing Up OST Configuration Files”
+- the section called “ Restoring OST Configuration Files”
+- the section called “Returning a Deactivated OST to Service”
+- the section called “ Aborting Recovery”
+- the section called “ Determining Which Machine is Serving an OST ”
+- the section called “ Changing the Address of a Failover Node”
+- the section called “ Separate a combined MGS/MDT”
 
 
 ## Working with Inactive OSTs
@@ -43,7 +40,7 @@ To activate an inactive OST on a live client or MDT, use the `lctl activate` com
 lctl --device 7 activate
 ```
 
-### Note
+**Note**
 
 A colon-separated list can also be specified. For example, `exclude=testfs-OST0000:testfs-OST0001`.
 
@@ -57,7 +54,7 @@ To get a list of all Lustre nodes, run this command on the MGS:
 # lctl get_param mgs.MGS.live.*
 ```
 
-### Note
+**Note**
 
 This command must be run on the MGS.
 
@@ -78,7 +75,7 @@ To get the names of all OSTs, run this command on the MDS:
 mds:/root# lctl get_param lov.*-mdtlov.target_obd 
 ```
 
-### Note
+**Note**
 
 This command must be run on the MDS.
 
@@ -117,11 +114,11 @@ You should only use the `writeconf` command if:
 
 The `writeconf` command is destructive to some configuration items (e.g. OST pools information and tunables set via `conf_param`), and should be used with caution.
 
-### Caution
+**Caution**
 
 The OST pools feature enables a group of OSTs to be named for file striping purposes. If you use OST pools, be aware that running the `writeconf` command erases **all** pools information (as well as any other parameters set via `lctl conf_param`). We recommend that the pools definitions (and `conf_param` settings) be executed via a script, so they can be regenerated easily after `writeconf` is performed. However, tunables saved with `lctl set_param -P` are *not* erased in this case.
 
-### Note
+**Note**
 
 If the MGS still holds any configuration logs, it may be possible to dump these logs to save any parameters stored with `lctl conf_param` by dumping the config logs on the MGS and saving the output:
 
@@ -213,11 +210,11 @@ To change a server NID:
    umount mount_point
    ```
 
-### Note
+**Note**
 
 The `replace_nids` command also cleans all old, invalidated records out of the configuration log, while preserving all other current settings.
 
-### Note
+**Note**
 
 The previous configuration log is backed up on the MGS disk with the suffix `'.bak'`.
 
@@ -323,20 +320,20 @@ A new OST can be added to existing Lustre file system on either an existing OSS 
    client# lfs find /test --ost test-OST0004 -size +4G | lfs_migrate -y
    ```
 
-   See [the section called “ `lfs_migrate` ”](dbdoclet.lfs_migrate.html) for details.
+   See *the section called “ `lfs_migrate` ”* for details.
 
 ## Removing and Restoring MDTs and OSTs
 
 OSTs and DNE MDTs can be removed from and restored to a Lustre filesystem. Deactivating an OST means that it is temporarily or permanently marked unavailable. Deactivating an OST on the MDS means it will not try to allocate new objects there or perform OST recovery, while deactivating an OST the client means it will not wait for OST recovery if it cannot contact the OST and will instead return an IO error to the application immediately if files on the OST are accessed. An OST may be permanently deactivated from the file system, depending on the situation and commands used.
 
-### Note
+**Note**
 
 A permanently deactivated MDT or OST still appears in the filesystem configuration until the configuration is regenerated with `writeconf` or it is replaced with a new MDT or OST at the same index and permanently reactivated. A deactivated OST will not be listed by `lfs df`.
 
 You may want to temporarily deactivate an OST on the MDS to prevent new files from being written to it in several situations:
 
-- A hard drive has failed and a RAID resync/rebuild is underway, though the OST can also be marked *degraded* by the RAID system to avoid allocating new files on the slow OST which can reduce performance, see [the section called “ Handling Degraded OST RAID Arrays”](dbdoclet.degraded_ost.html) for more details.
-- OST is nearing its space capacity, though the MDS will already try to avoid allocating new files on overly-full OSTs if possible, see [the section called “Allocating Free Space on OSTs”](dbdoclet.balancing_free_space.html) for details.
+- A hard drive has failed and a RAID resync/rebuild is underway, though the OST can also be marked *degraded* by the RAID system to avoid allocating new files on the slow OST which can reduce performance, see *the section called “ Handling Degraded OST RAID Arrays”* for more details.
+- OST is nearing its space capacity, though the MDS will already try to avoid allocating new files on overly-full OSTs if possible, see *the section called “Allocating Free Space on OSTs”* for details.
 - MDT/OST storage or MDS/OSS node has failed, and will not be available for some time (or forever), but there is still a desire to continue using the filesystem before it is repaired.
 
 
@@ -446,7 +443,7 @@ When deactivating an OST, note that the client and MDS each have an OSC device t
 
       ### Note
 
-      A deactivated OST still appears in the file system configuration, though a replacement OST can be created using the `mkfs.lustre --replace` option, see [the section called “ Restoring OST Configuration Files”](section_restore_ost.html).
+      A deactivated OST still appears in the file system configuration, though a replacement OST can be created using the `mkfs.lustre --replace` option, see *the section called “ Restoring OST Configuration Files”*.
 
 ### Backing Up OST Configuration Files
 
@@ -480,7 +477,7 @@ If the OST device is still accessible, then the Lustre configuration files on th
 
 ### Restoring OST Configuration Files
 
-If the original OST is still available, it is best to follow the OST backup and restore procedure given in either [the section called “ Backing Up and Restoring an MDT or OST (ldiskfs Device Level)”](dbdoclet.backup_device.html), or [the section called “ Backing Up an OST or MDT (Backend File System Level)”](backup_fs_level.html) and [the section called “ Restoring a File-Level Backup”](backup_fs_level.restore.html).
+If the original OST is still available, it is best to follow the OST backup and restore procedure given in either *the section called “ Backing Up and Restoring an MDT or OST (ldiskfs Device Level)”*, or *the section called “ Backing Up an OST or MDT (Backend File System Level)”*and *the section called “ Restoring a File-Level Backup”*.
 
 To replace an OST that was removed from service due to corruption or hardware failure, the replacement OST needs to be formatted using `mkfs.lustre`, and the Lustre file system configuration should be restored, if available. Any objects stored on the OST will be permanently lost, and files using the OST should be deleted and/or restored from backup.
 
@@ -523,7 +520,7 @@ If the OST configuration files were not backed up, due to the OST file system be
 
 4. Recreate the OST configuration files, if unavailable.
 
-   Follow the procedure in [the section called “Fixing a Bad LAST_ID on an OST”](dbdoclet.repair_ost_lastid.html) to recreate the LAST_ID file for this OST index. The `last_rcvd` file will be recreated when the OST is first mounted using the default parameters, which are normally correct for all file systems. The `CONFIGS/mountdata` file is created by `mkfs.lustre` at format time, but has flags set that request it to register itself with the MGS. It is possible to copy the flags from another working OST (which should be the same):
+   Follow the procedure in *the section called “Fixing a Bad LAST_ID on an OST”* to recreate the LAST_ID file for this OST index. The `last_rcvd` file will be recreated when the OST is first mounted using the default parameters, which are normally correct for all file systems. The `CONFIGS/mountdata` file is created by `mkfs.lustre` at format time, but has flags set that request it to register itself with the MGS. It is possible to copy the flags from another working OST (which should be the same):
 
    ```
    oss1# debugfs -c -R "dump CONFIGS/mountdata /tmp" /dev/other_osdev
@@ -559,7 +556,7 @@ You can abort recovery with either the `lctl` utility or by mounting the target 
 mds# mount -t lustre -L mdt_name -o abort_recov /mount_point
 ```
 
-### Note
+**Note**
 
 The recovery process is blocked until all OSTs are available.
 
@@ -603,11 +600,11 @@ or
 oss# tunefs.lustre --erase-params --failnode=NID /dev/ost_device
 ```
 
-For more information about the `--servicenode` and `--failnode` options, see [*Configuring Failover in a Lustre File System*](configuringfailover.html).
+For more information about the `--servicenode` and `--failnode` options, see *Configuring Failover in a Lustre File System*.
 
 ## Separate a combined MGS/MDT
 
-These instructions assume the MGS node will be the same as the MDS node. For instructions on how to move MGS to a different node, see [the section called “ Changing a Server NID”](dbdoclet.changingservernid.html).
+These instructions assume the MGS node will be the same as the MDS node. For instructions on how to move MGS to a different node, see *the section called “ Changing a Server NID”*.
 
 These instructions are for doing the split without shutting down other servers and clients.
 
@@ -647,7 +644,7 @@ These instructions are for doing the split without shutting down other servers a
    mds# umount /mdt_mount_point
    ```
 
-   See [the section called “ Regenerating Lustre Configuration Logs”](dbdoclet.50438199_54623.html) for alternative method.
+   See *the section called “ Regenerating Lustre Configuration Logs”* for alternative method.
 
 4. Start the MGS.
 
