--- a/03.4-ManagingLustreNetworking(LNet).md
+++ b/03.4-ManagingLustreNetworking(LNet).md
@@ -86,7 +86,7 @@ Before the LNet modules can be removed, LNet references must be removed. In gene
 lctl network unconfigure
 ```
 
-### Note
+**Note**
 
 Attempting to remove Lustre modules prior to stopping the network may result in a crash or an LNet hang. If this occurs, the node must be rebooted (in most cases). Make sure that the Lustre network and Lustre file system are stopped prior to unloading the modules. Be extremely careful using `rmmod -f`.
 
@@ -96,7 +96,7 @@ To unconfigure the LNet network, run:
 modprobe -r lnd_and_lnet_modules
 ```
 
-### Note
+**Note**
 
 To remove all Lustre modules, run:
 
@@ -117,7 +117,7 @@ To aggregate bandwidth across both rails of a dual-rail IB cluster (o2iblnd) [[1
 
 A Lustre file system contains OSSs with two InfiniBand HCAs. Lustre clients have only one InfiniBand HCA using OFED-based Infiniband ''o2ib'' drivers. Load balancing between the HCAs on the OSS is accomplished through LNet.
 
- Setting Up `lustre.conf` for Load Balancing
+### Setting Up `lustre.conf` for Load Balancing
 
 To configure LNet for load balancing on clients and servers:
 
@@ -260,7 +260,7 @@ The format of the file which is passed into the script is as follows:
 
 `*network*: { gateway: *gateway*@*exit_network* [hop: *hop*] [priority: *priority*] }`
 
-An LNet router is identified when its local NID appears within the list of routes. However, this can not be achieved by the use of this script, since the script only adds extra routes after the router is identified. To ensure that a router is identified correctly, make sure to add its local NID in the routes parameter in the modprobe lustre configuration file. See [the section called “ Introduction”](dbdoclet.50438293_15350.html).
+An LNet router is identified when its local NID appears within the list of routes. However, this can not be achieved by the use of this script, since the script only adds extra routes after the router is identified. To ensure that a router is identified correctly, make sure to add its local NID in the routes parameter in the modprobe lustre configuration file. See *the section called “ Introduction”*.
 
 ### `lustre_routes_conversion`
 
