--- a/03.5-LNet Software Multi-Rail 2.10.md
+++ b/03.5-LNet Software Multi-Rail 2.10.md
@@ -27,9 +27,9 @@ Every node using multi-rail networking needs to be properly configured. Multi-ra
 1. Configuring multiple network interfaces present on the local node.
 2. Adding remote peers that are multi-rail capable (are connected to one or more common networks with at least two interfaces).
 
-This section is a supplement to [the section called “Adding, Deleting and Showing Networks”](lnet_config.lnetaddshowdelete.html) and contains further examples for Multi-Rail configurations.
+This section is a supplement to *the section called “Adding, Deleting and Showing Networks”* and contains further examples for Multi-Rail configurations.
 
-For information on the dynamic peer discovery feature added in Lustre Release 2.11.0, see [the section called “Dynamic Peer Discovery”](lnet_config.dynamic_discovery.html).
+For information on the dynamic peer discovery feature added in Lustre Release 2.11.0, see *the section called “Dynamic Peer Discovery”*.
 
 ### Configure Multiple Interfaces on the Local Node
 
@@ -251,8 +251,6 @@ The below example outlines a simple system where all the Lustre nodes are MR cap
 **Figure 9. Routing Configuration with Multi-Rail**
 
  ![Routing Configuration with Multi-Rail](./figures/MR_RoutingConfig.png) 
-
- 
 
 The routers can aggregate the interfaces on each side of the network by configuring them on the appropriate network.
 
