--- a/03.6-Upgrading a Lustre File System.md
+++ b/03.6-Upgrading a Lustre File System.md
@@ -69,15 +69,15 @@ To upgrade a Lustre software release 2.x to a more recent major release, complet
 
    ### Caution
 
-   Before installing the Lustre software, back up ALL data. The Lustre software contains kernel modifications that interact with storage devices and may introduce security issues and data loss if not installed, configured, or administered properly. If a full backup of the file system is not practical, a device-level backup of the MDT file system is recommended. See [*Backing Up and Restoring a File System*](backupandrestore.html) for a procedure.
+   Before installing the Lustre software, back up ALL data. The Lustre software contains kernel modifications that interact with storage devices and may introduce security issues and data loss if not installed, configured, or administered properly. If a full backup of the file system is not practical, a device-level backup of the MDT file system is recommended. See *Backing Up and Restoring a File System* for a procedure.
 
-2. Shut down the entire filesystem by following [the section called “ Stopping the Filesystem”](dbdoclet.shutdownLustre.html)
+2. Shut down the entire filesystem by following the section called “ Stopping the Filesystem”
 
 3. Upgrade the Linux operating system on all servers to a compatible (tested) Linux distribution and reboot.
 
 4. Upgrade the Linux operating system on all clients to Red Hat Enterprise Linux 6 or other compatible (tested) distribution and reboot.
 
-5. Download the Lustre server RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See [Table 5, “Packages Installed on Lustre Servers”](section_rqs_tjw_3k.html#table_cnh_5m3_gk) for a list of required packages.
+5. Download the Lustre server RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See Table 5, “Packages Installed on Lustre Servers”for a list of required packages.
 
 6. Install the Lustre server packages on all Lustre servers (MGS, MDSs, and OSSs).
 
@@ -105,7 +105,7 @@ To upgrade a Lustre software release 2.x to a more recent major release, complet
 
    4. Repeat these steps on each Lustre server.
 
-7. Download the Lustre client RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See [Table 6, “Packages Installed on Lustre Clients”](section_rqs_tjw_3k.html#table_j3r_ym3_gk) for a list of required packages.
+7. Download the Lustre client RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See Table 6, “Packages Installed on Lustre Clients” for a list of required packages.
 
    ### Note
 
@@ -145,7 +145,7 @@ To upgrade a Lustre software release 2.x to a more recent major release, complet
 
    
 
-   For more information about wide striping, see [the section called “Lustre Striping Internals”](wide_striping.html).
+   For more information about wide striping, see the section called “Lustre Striping Internals”.
 
 10. (Optional) For upgrades to Lustre software release 2.4 or higher, to format an additional MDT, complete these steps:
 
@@ -204,7 +204,7 @@ To upgrade a Lustre software release 2.x to a more recent major release, complet
 
     This step is not reversible. Do not complete this step until you are sure you will not be downgrading the Lustre software.
 
-    Introduced in Lustre 2.4This step only enables FID-in-dirent for newly created files. If you are upgrading to Lustre software release 2.4, you can use namespace LFSCK to enable FID-in-dirent for the existing files. For the case of upgrading from Lustre software release 1.8, it is important to note that if you do NOT enable `dirdata` via the `tune2fs` command above, the namespace LFSCK will NOT generate FID-in-dirent for the existing files. For more information about FID-in-dirent and related functionalities in LFSCK, see[the section called “ Lustre File System Storage and I/O”](understandinglustre.storageio.html).
+    Introduced in Lustre 2.4This step only enables FID-in-dirent for newly created files. If you are upgrading to Lustre software release 2.4, you can use namespace LFSCK to enable FID-in-dirent for the existing files. For the case of upgrading from Lustre software release 1.8, it is important to note that if you do NOT enable `dirdata` via the `tune2fs` command above, the namespace LFSCK will NOT generate FID-in-dirent for the existing files. For more information about FID-in-dirent and related functionalities in LFSCK, see the section called “ Lustre File System Storage and I/O”.
 
 13. Start the Lustre file system by starting the components in the order shown in the following steps:
 
@@ -244,7 +244,7 @@ To upgrade a Lustre software release 2.x to a more recent major release, complet
 
 The mounting order described in the steps above must be followed for the initial mount and registration of a Lustre file system after an upgrade. For a normal start of a Lustre file system, the mounting order is MGT, OSTs, MDT(s), clients.
 
-If you have a problem upgrading a Lustre file system, see [the section called “Reporting a Lustre File System Bug”](dbdoclet.reporting_lustre_problem.html)for ways to get help.
+If you have a problem upgrading a Lustre file system, see the section called “Reporting a Lustre File System Bug” for ways to get help.
 
 ## Upgrading to Lustre Software Release 2.x.y (Minor Release)
 
@@ -256,9 +256,9 @@ To upgrade Lustre software release 2.x.y to a more recent minor release, complet
 
    ### Caution
 
-   Before installing the Lustre software, back up ALL data. The Lustre software contains kernel modifications that interact with storage devices and may introduce security issues and data loss if not installed, configured, or administered properly. If a full backup of the file system is not practical, a device-level backup of the MDT file system is recommended. See [*Backing Up and Restoring a File System*](backupandrestore.html) for a procedure.
+   Before installing the Lustre software, back up ALL data. The Lustre software contains kernel modifications that interact with storage devices and may introduce security issues and data loss if not installed, configured, or administered properly. If a full backup of the file system is not practical, a device-level backup of the MDT file system is recommended. See *Backing Up and Restoring a File System* for a procedure.
 
-2. Download the Lustre server RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See [Table 5, “Packages Installed on Lustre Servers”](section_rqs_tjw_3k.html#table_cnh_5m3_gk) for a list of required packages.
+2. Download the Lustre server RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See Table 5, “Packages Installed on Lustre Servers” for a list of required packages.
 
 3. For a rolling upgrade, complete any procedures required to keep the Lustre file system running while the server to be upgraded is offline, such as failing over a primary server to its secondary partner.
 
@@ -296,7 +296,7 @@ To upgrade Lustre software release 2.x.y to a more recent minor release, complet
 
    5. Repeat these steps on each Lustre server.
 
-6. Download the Lustre client RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See [Table 6, “Packages Installed on Lustre Clients”](section_rqs_tjw_3k.html#table_j3r_ym3_gk) for a list of required packages.
+6. Download the Lustre client RPMs for your platform from the [Lustre Releases](https://wiki.whamcloud.com/display/PUB/Lustre+Releases) repository. See Table 6, “Packages Installed on Lustre Clients” for a list of required packages.
 
 7. Install the Lustre client packages on each of the Lustre clients to be upgraded.
 
@@ -304,23 +304,15 @@ To upgrade Lustre software release 2.x.y to a more recent minor release, complet
 
    2. Use the `yum` command to install the packages:
 
-      
-
       ```
       # yum --nogpgcheck install pkg1.rpm pkg2.rpm ... 
       ```
 
-      
-
    3. Verify the packages were installed correctly:
-
-      
 
       ```
       # rpm -qa|egrep "lustre|kernel"
       ```
-
-      
 
    4. Mount the Lustre client to restart the Lustre software on the client:
 
@@ -330,4 +322,4 @@ To upgrade Lustre software release 2.x.y to a more recent minor release, complet
 
    5. Repeat these steps on each Lustre client.
 
-If you have a problem upgrading a Lustre file system, see [the section called “Reporting a Lustre File System Bug”](dbdoclet.reporting_lustre_problem.html)for some suggestions for how to get help. 
+If you have a problem upgrading a Lustre file system, see the section called “Reporting a Lustre File System Bug” for some suggestions for how to get help. 
