--- a/03.7-BackingUp and Restoring a File System.md
+++ b/03.7-BackingUp and Restoring a File System.md
@@ -22,7 +22,7 @@ File system backups are performed from a Lustre client (or many clients working 
 
 However, due to the large size of most Lustre file systems, it is not always possible to get a complete backup. We recommend that you back up subsets of a file system. This includes subdirectories of the entire file system, filesets for a single user, files incremented by date, and so on, so that restores can be done more efficiently.
 
-### Note
+**Note**
 
 Lustre internally uses a 128-bit file identifier (FID) for all files. To interface with user applications, the 64-bit inode numbers are returned by the `stat()`, `fstat()`, and `readdir()` system calls on 64-bit applications, and 32-bit inode numbers to 32-bit applications.
 
@@ -120,7 +120,7 @@ $ lustre_rsync --source=/mnt/lustre --target=/mnt/target1 \
 
 In some cases, it is useful to do a full device-level backup of an individual device (MDT or OST), before replacing hardware, performing maintenance, etc. Doing full device-level backups ensures that all of the data and configuration files is preserved in the original state and is the easiest method of doing a backup. For the MDT file system, it may also be the fastest way to perform the backup and restore, since it can do large streaming read and write operations at the maximum bandwidth of the underlying devices.
 
-### Note
+**Note**
 
 Keeping an updated full backup of the MDT is especially important because permanent failure or corruption of the MDT file system renders the much larger amount of data in all the OSTs largely inaccessible and unusable. The storage needed for one or two full MDT device backups is much smaller than doing a full filesystem backup, and can use less expensive storage than the actual MDT device(s) since it only needs to have good streaming read/write speed instead of high random IOPS.
 
@@ -149,7 +149,7 @@ In order to ensure that the backup is fully consistent, the MDT or OST must be u
 
 This procedure provides an alternative to backup or migrate the data of an OST or MDT at the file level. At the file-level, unused space is omitted from the backup and the process may be completed quicker with a smaller total backup size. Backing up a single OST device is not necessarily the best way to perform backups of the Lustre file system, since the files stored in the backup are not usable without metadata stored on the MDT and additional file stripes that may be on other OSTs. However, it is the preferred method for migration of OST devices, especially when it is desirable to reformat the underlying file system with different configuration options or to reduce fragmentation.
 
-### Note
+**Note**
 
 **Prior to Lustre software release 2.3**, the only successful way to perform an MDT backup and restore was to do a device-level backup as described in [the section called “ Backing Up and Restoring an MDT or OST (ldiskfs Device Level)”](dbdoclet.backup_device.html). The ability to do MDT file-level backups is not available for Lustre software release 2.0 through 2.2, because restoration of the Object Index (OI) file does not return the MDT to a functioning state.
 
@@ -169,7 +169,7 @@ Prior to Lustre software release 2.11.0, we can only do the backend file system 
 
 *${target}* is composed of the target type (MDT or OST) plus the target index, such as `MDT0000`, `OST0001`, and so on.
 
-### Note
+**Note**
 
 The index_backup is also valid for an ldiskfs-based system, that will be used when migrating data between ldiskfs-based and zfs-based systems as described in [the section called “ Migration Between ZFS and ldiskfs Target Filesystems ”](migrate_backends.html).
 
@@ -419,7 +419,7 @@ If you want to perform disk-based backups (because, for example, access to the b
 
 Because LVM snapshots cost CPU cycles as new files are written, taking snapshots of the main Lustre file system will probably result in unacceptable performance losses. You should create a new, backup Lustre file system and periodically (e.g., nightly) back up new/changed files to it. Periodic snapshots can be taken of this backup file system to create a series of "full" backups.
 
-### Note
+**Note**
 
 Creating an LVM snapshot is not as reliable as making a separate backup, because the LVM snapshot shares the same disks as the primary MDT device, and depends on the primary MDT device for much of its data. If the primary MDT device becomes corrupted, this may result in the snapshot being corrupted.
 
@@ -634,7 +634,7 @@ You can also extend or shrink snapshot volumes if you find your daily deltas are
 lvextend -L10G /dev/vgmain/MDT0.b1
 ```
 
-### Note
+**Note**
 
 Extending snapshots seems to be broken in older LVM. It is working in LVM v2.02.01.
 
