--- a/03.8-Managing File Layout (Striping) and Free Space.md
+++ b/03.8-Managing File Layout (Striping) and Free Space.md
@@ -15,9 +15,9 @@ This chapter describes file layout (striping) and I/O options, and includes the 
 
 In a Lustre file system, the MDS allocates objects to OSTs using either a round-robin algorithm or a weighted algorithm. When the amount of free space is well balanced (i.e., by default, when the free space across OSTs differs by less than 17%), the round-robin algorithm is used to select the next OST to which a stripe is to be written. Periodically, the MDS adjusts the striping layout to eliminate some degenerated cases in which applications that create very regular file layouts (striping patterns) preferentially use a particular OST in the sequence.
 
-Normally the usage of OSTs is well balanced. However, if users create a small number of exceptionally large files or incorrectly specify striping parameters, imbalanced OST usage may result. When the free space across OSTs differs by more than a specific amount (17% by default), the MDS then uses weighted random allocations with a preference for allocating objects on OSTs with more free space. (This can reduce I/O performance until space usage is rebalanced again.) For a more detailed description of how striping is allocated, see [the section called “Managing Free Space”](dbdoclet.50438209_10424.html).
+Normally the usage of OSTs is well balanced. However, if users create a small number of exceptionally large files or incorrectly specify striping parameters, imbalanced OST usage may result. When the free space across OSTs differs by more than a specific amount (17% by default), the MDS then uses weighted random allocations with a preference for allocating objects on OSTs with more free space. (This can reduce I/O performance until space usage is rebalanced again.) For a more detailed description of how striping is allocated, see *the section called “Managing Free Space”*.
 
-Files can only be striped over a finite number of OSTs, based on the maximum size of the attributes that can be stored on the MDT. If the MDT is ldiskfs-based without the `ea_inode` feature, a file can be striped across at most 160 OSTs. With a ZFS-based MDT, or if the `ea_inode` feature is enabled for an ldiskfs-based MDT, a file can be striped across up to 2000 OSTs. For more information, see [the section called “Lustre Striping Internals”](wide_striping.html).
+Files can only be striped over a finite number of OSTs, based on the maximum size of the attributes that can be stored on the MDT. If the MDT is ldiskfs-based without the `ea_inode` feature, a file can be striped across at most 160 OSTs. With a ZFS-based MDT, or if the `ea_inode` feature is enabled for an ldiskfs-based MDT, a file can be striped across up to 2000 OSTs. For more information, see *the section called “Lustre Striping Internals”*.
 
 ## Lustre File Layout (Striping) Considerations
 
@@ -72,11 +72,11 @@ The `stripe_count` indicates how many OSTs to use. The default `stripe_count` va
 
 The start OST is the first OST to which files are written. The default value for `start_ost` is -1, which allows the MDS to choose the starting index. This setting is strongly recommended, as it allows space and load balancing to be done by the MDS as needed. If the value of `start_ost` is set to a value other than -1, the file starts on the specified OST index. OST index numbering starts at 0.
 
-### Note
+**Note**
 
 If the specified OST is inactive or in a degraded mode, the MDS will silently choose another target.
 
-### Note
+**Note**
 
 If you pass a `start_ost` value of 0 and a `stripe_count` value of *1*, all files are written to OST 0, until space is exhausted. This is probably not what you meant to do. If you only want to adjust the stripe count and keep the other parameters at their default settings, do not specify any of the other parameters:
 
@@ -86,7 +86,7 @@ client# lfs setstripe -c stripe_count filename
 
 **pool_name**
 
-The `pool_name` specifies the OST pool to which the file will be written. This allows limiting the OSTs used to a subset of all OSTs in the file system. For more details about using OST pools, see [Creating and Managing OST Pools](ManagingFileSystemIO.html#50438211_75549).
+The `pool_name` specifies the OST pool to which the file will be written. This allows limiting the OSTs used to a subset of all OSTs in the file system. For more details about using OST pools, see *Creating and Managing OST Pools*.
 
 ### Specifying a File Layout (Striping Pattern) for a Single File
 
@@ -140,7 +140,7 @@ The example below indicates that the file `full_stripe` is striped over all six 
   5        2       0x2     0
 ```
 
-This is in contrast to the output in [the section called “Setting the Stripe Size”](dbdoclet.50438209_60155.html), which shows only a single object for the file.
+This is in contrast to the output in *the section called “Setting the Stripe Size”*, which shows only a single object for the file.
 
 ### Setting the Striping Layout for a Directory
 
@@ -152,7 +152,7 @@ To change the striping pattern for a sub-directory, create a directory with desi
 
 Setting the striping specification on the `root` directory determines the striping for all new files created in the file system unless an overriding striping specification takes precedence (such as a striping layout specified by the application, or set using `lfs setstripe`, or specified for the parent directory).
 
-### Note
+**Note**
 
 The striping settings for a `root` directory are, by default, applied to any new child directories created in the root directory, unless striping settings have been specified for the child directory.
 
@@ -229,7 +229,7 @@ lfs find [--recursive | -r] file|directory ...
 
 ### Locating the MDT for a remote directory
 
-Introduced in Lustre 2.4Lustre software release 2.4 can be configured with multiple MDTs in the same file system. Each sub-directory can have a different MDT. To identify on which MDT a given subdirectory is located, pass the `getstripe [--mdt-index|-M]` parameters to `lfs`. An example of this command is provided in the section [the section called “Removing an MDT from the File System”](dbdoclet.rmremotedir.html).
+Introduced in Lustre 2.4Lustre software release 2.4 can be configured with multiple MDTs in the same file system. Each sub-directory can have a different MDT. To identify on which MDT a given subdirectory is located, pass the `getstripe [--mdt-index|-M]` parameters to `lfs`. An example of this command is provided in the section *the section called “Removing an MDT from the File System”*.
 
 Introduced in Lustre 2.10
 
@@ -243,15 +243,15 @@ An example of how data blocks of PFL files are mapped to OST objects of componen
 
 **Figure 10. PFL object mapping diagram**
 
- ![img]()PFL object mapping diagram
+![PFL object mapping diagram](figures/PFL_object_mapping_diagram.png)
 
-The PFL file in [Figure 10, “PFL object mapping diagram”](pfl.html#managinglayout.fig.pfl) has 3 components and shows the mapping for the blocks of a 2055MB file. The stripe size for the first two components is 1MB, while the stripe size for the third component is 4MB. The stripe count is increasing for each successive component. The first component only has two 1MB blocks and the single object has a size of 2MB. The second component holds the next 254MB of the file spread over 4 separate OST objects in RAID-0, each one will have a size of 256MB / 4 objects = 64MB per object. Note the first two objects `obj 2,0` and `obj 2,1` have a 1MB hole at the start where the data is stored in the first component. The final component holds the next 1800MB spread over 32 OST objects. There is a 256MB / 32 = 8MB hole at the start each one for the data stored in the first two components. Each object will be 2048MB / 32 objects = 64MB per object, except the `obj 3,0` that holds an extra 4MB chunk and `obj 3,1` that holds an extra 3MB chunk. If more data was written to the file, only the objects in component 3 would increase in size.
+The PFL file in Figure 10, “PFL object mapping diagram”  has 3 components and shows the mapping for the blocks of a 2055MB file. The stripe size for the first two components is 1MB, while the stripe size for the third component is 4MB. The stripe count is increasing for each successive component. The first component only has two 1MB blocks and the single object has a size of 2MB. The second component holds the next 254MB of the file spread over 4 separate OST objects in RAID-0, each one will have a size of 256MB / 4 objects = 64MB per object. Note the first two objects `obj 2,0` and `obj 2,1` have a 1MB hole at the start where the data is stored in the first component. The final component holds the next 1800MB spread over 32 OST objects. There is a 256MB / 32 = 8MB hole at the start each one for the data stored in the first two components. Each object will be 2048MB / 32 objects = 64MB per object, except the `obj 3,0` that holds an extra 4MB chunk and `obj 3,1` that holds an extra 3MB chunk. If more data was written to the file, only the objects in component 3 would increase in size.
 
 When a file range with defined but not instantiated component is accessed, clients will send a Layout Intent RPC to the MDT, and the MDT would instantiate the objects of the components covering that range.
 
 Next, some commands for user to operate PFL files are introduced and some examples of possible composite layout are illustrated as well. Lustre provides commands `lfs setstripe` and `lfs migrate` for users to operate PFL files. `lfs setstripe`commands are used to create PFL files, add or delete components to or from an existing composite file; `lfs migrate` commands are used to re-layout the data in existing files using the new layout parameter by copying the data from the existing OST(s) to the new OST(s). Also, as introduced in the previous sections, `lfs getstripe` commands can be used to list the striping/component information for a given PFL file, and `lfs find` commands can be used to search the directory tree rooted at the given directory or file name for the files that match the given PFL component parameters.
 
-### Note
+**Note**
 
 Using PFL files requires both the client and server to understand the PFL file layout, which isn't available for Lustre 2.9 and earlier. And it will not prevent older clients from accessing non-PFL files in the filesystem.
 
@@ -259,7 +259,7 @@ Using PFL files requires both the client and server to understand the PFL file l
 
 `lfs setstripe` commands are used to create PFL files, add or delete components to or from an existing composite file. (Suppose we have 8 OSTs in the following examples and stripe size is 1MB by default.)
 
- Create a PFL file
+#### Create a PFL file
 
 **Command**
 
@@ -323,7 +323,7 @@ $ lfs getstripe /mnt/testfs/create_comp
       lmm_stripe_offset: 4
 ```
 
-### Note
+**Note**
 
 Only the first component’s OST objects of the PFL file are instantiated when the layout is being set. Other instantiation is delayed to later write/truncate operations.
 
@@ -394,7 +394,7 @@ lfs setstripe --component-add
 
 The option `--component-add` is used to add components to an existing composite file. The extent start of the first component to be added is equal to the extent end of last component in the existing file, and all components to be added must be adjacent with each other.
 
-### Note
+**Note**
 
 If the last existing component is specified by `-E -1` or `-E eof`, which covers to the end of the file, it must be deleted before a new one is added.
 
@@ -406,7 +406,7 @@ $ lfs setstripe --component-add -E -1 -c 4 -o 6-7,0,5 \
 /mnt/testfs/add_comp
 ```
 
-This command adds a new component which starts from the end of the last existing component to the end of file. The layout of this example is illustrated in [Figure 12, “Example: add a component to an existing composite file”](ch19s05s01s02.html#managinglayout.fig.pfl_addcomp). The last component stripes across 4 OSTs in sequence OST6, OST7, OST0 and OST5, covers [64M, EOF).
+This command adds a new component which starts from the end of the last existing component to the end of file. The layout of this example is illustrated in Figure 12, “Example: add a component to an existing composite file”. The last component stripes across 4 OSTs in sequence OST6, OST7, OST0 and OST5, covers [64M, EOF).
 
 **Figure 12. Example: add a component to an existing composite file**
 
@@ -459,7 +459,7 @@ $ lfs getstripe /mnt/testfs/add_comp
 
 The component ID "lcme_id" changes as layout generation changes. It is not necessarily sequential and does not imply ordering of individual components.
 
-### Note
+**Note**
 
 Similar to specifying a full-file composite layout at file creation time, `--component-add` won't instantiate OST objects, the instantiation is delayed to later write/truncate operations. For example, after writing beyond the 64MB start of the file's last component, the new component has had objects allocated:
 
@@ -484,7 +484,7 @@ $ lfs getstripe -I5 /mnt/testfs/add_comp
       - 3: { l_ost_idx: 5, l_fid: [0x100050000:0x4:0x0] }
 ```
 
- Delete component(s) from an existing file
+#### Delete component(s) from an existing file
 
 **Command**
 
@@ -498,7 +498,7 @@ The option `--component-del` is used to remove the component(s) specified by com
 
 The ID specified by `-I` option is the numerical unique ID of the component, which can be obtained by command `lfs getstripe -I` command, and the flag specified by `--component-flags` option is a certain type of components, which can be obtained by command `lfs getstripe --component-flags`. For now, we only have two flags `init` and `^init` for instantiated and un-instantiated components respectively.
 
-### Note
+**Note**
 
 Deletion must start with the last component because hole is not allowed.
 
@@ -512,7 +512,7 @@ $ lfs getstripe -I /mnt/testfs/del_comp
 $ lfs setstripe --component-del -I 5 /mnt/testfs/del_comp
 ```
 
-This example deletes the component with ID 5 from file `/mnt/testfs/del_comp`. If we still use the last example, the final result is illustrated in [Figure 13, “Example: delete a component from an existing file”](ch19s05s01s03.html#managinglayout.fig.pfl_delcomp).
+This example deletes the component with ID 5 from file `/mnt/testfs/del_comp`. If we still use the last example, the final result is illustrated in Figure 13, “Example: delete a component from an existing file”.
 
 **Figure 13. Example: delete a component from an existing file**
 
@@ -610,7 +610,7 @@ $ lfs getstripe /mnt/testfs/pfldir/pflfile
       lmm_stripe_offset: -1
 ```
 
-### Note
+**Note**
 
 `lfs setstripe --component-add/del` can't be run on a directory, because default layout in directory is likea config, which can be arbitrarily changed by `lfs setstripe`, while layout in file may have data (OST objects) attached. If you want to delete default layout in a directory, run `lfs setstripe -d *dirname*` to return the directory to the filesystem-wide defaults, like:
 
@@ -663,7 +663,7 @@ $ lfs migrate -E 1M -S 512K -c 1 -E -1 -S 1M -c 2 \
 /mnt/testfs/norm_to_2comp
 ```
 
-In this example, a 5MB size file with 1 stripe and 128K stripe size is migrated to a composite layout file with 2 components, illustrated in [Figure 14, “Example: migrate normal to composite”](ch19s05s02.html#managinglayout.fig.pfl_norm_to_comp).
+In this example, a 5MB size file with 1 stripe and 128K stripe size is migrated to a composite layout file with 2 components, illustrated in Figure 14, “Example: migrate normal to composite”.
 
 **Figure 14. Example: migrate normal to composite**
 
@@ -712,7 +712,7 @@ $ lfs migrate -E 1M -S 1M -c 2 -E 4M -S 1M -c 2 -E -1 -S 3M -c 3 \
 /mnt/testfs/2comp_to_3comp
 ```
 
-In this example, a composite layout file with 2 components is migrated a composite layout file with 3 components. If we still use the example in case1, the migration process is illustrated in [Figure 15, “Example: migrate composite to composite”](ch19s05s02.html#managinglayout.fig.pfl_comp_to_comp).
+In this example, a composite layout file with 2 components is migrated a composite layout file with 3 components. If we still use the example in case1, the migration process is illustrated in Figure 15, “Example: migrate composite to composite”.
 
 **Figure 15. Example: migrate composite to composite**
 
@@ -775,7 +775,7 @@ $ dd if=/dev/urandom of=/mnt/testfs/norm_to_2comp bs=1M count=5
 $ lfs migrate -c 2 -S 2M /mnt/testfs/3comp_to_normal
 ```
 
-In this example, a composite file with 3 components is migrated to a normal file with 2 stripes and 2M stripe size. If we still use the example in Case2, the migration process is illustrated in [Figure 16, “Example: migrate composite to normal”](ch19s05s02.html#managinglayout.fig.pfl_comp_to_norm).
+In this example, a composite file with 3 components is migrated to a normal file with 2 stripes and 2M stripe size. If we still use the example in Case2, the migration process is illustrated in Figure 16, “Example: migrate composite to normal”.
 
 **Figure 16. Example: migrate composite to normal**
 
@@ -1039,7 +1039,7 @@ lfs find directory|filename
 [[!] --component-flags=comp_flags]
 ```
 
-### Note
+**Note**
 
 If you use `--component-xxx` options, only the composite files will be searched; but if you use `! --component-xxx` options, all the files will be searched.
 
@@ -1089,7 +1089,7 @@ $ lfs find /mnt/testfs/testdir --component-flag=init
 /mnt/testfs/testdir/dir_3comp/2comp
 ```
 
-### Note
+**Note**
 
 Since `lfs find` uses "`!`" to do negative search, we don’t support flag `^init` here.
 
@@ -1110,7 +1110,7 @@ Free space is an important consideration in assigning file stripes. The `lfs df`
 | `-h`           | Displays sizes in human readable format (for example: 1K, 234M, 5G). |
 | `-i, --inodes` | Lists inodes instead of block usage.                         |
 
-### Note
+**Note**
 
 The `df -i` and `lfs df -i` commands show the minimum number of inodes that can be created in the file system at the current time. If the total number of objects available across all of the OSTs is smaller than those available on the MDT(s), taking into account the default file striping, then `df -i` will also report a smaller number of inodes than could be created. Running `lfs df -i` will report the actual number of inodes that are free on each target.
 
@@ -1192,7 +1192,7 @@ lctl conf_param fsname-MDT0000.lov.qos_prio_free=100
 
 .
 
-### Note
+**Note**
 
 When `qos_prio_free` is set to `100`, a weighted random algorithm is still used to assign stripes, so, for example, if OST2 has twice as much free space as OST1, OST2 is twice as likely to be used, but it is not guaranteed to be used.
 
@@ -1210,6 +1210,6 @@ If using an ldiskfs-based MDT, the maximum number of OSTs over which files can b
 tune2fs -O ea_inode /dev/mdtdev
 ```
 
-### Note
+**Note**
 
 The maximum stripe count for a single file does not limit the maximum number of OSTs that are in the filesystem as a whole, only the maximum possible size and maximum aggregate bandwidth for the file.
