--- a/03.9-Data on MDT (DoM).md
+++ b/03.9-Data on MDT (DoM).md
@@ -10,7 +10,7 @@ This chapter describes Data on MDT (DoM).
 
 The Lustre Data on MDT (DoM) feature improves small file IO by placing small files directly on the MDT, and also improves large file IO by avoiding the OST being affected by small random IO that can cause device seeking and hurt the streaming IO performance. Therefore, users can expect more consistent performance for both small file IO and mixed IO patterns.
 
-The layout of a DoM file is stored on disk as a composite layout and is a special case of Progressive File Layout (PFL). Please see [the section called “Progressive File Layout(PFL)”](pfl.html) for more information on PFL. For DoM files, the file layout is composed of the component of the file, which is placed on an MDT, and the rest of components are placed on OSTs, if needed. The first component is placed on the MDT in the MDT object data blocks. This component always has one stripe with size equal to the component size. Such a component with an MDT layout can be only the first component in composite layout. The rest of components are placed over OSTs as usual with a RAID0 layout. The OST components are not instantiated until a client writes or truncates the file beyond the size of the MDT component.
+The layout of a DoM file is stored on disk as a composite layout and is a special case of Progressive File Layout (PFL). Please see *the section called “Progressive File Layout(PFL)”* for more information on PFL. For DoM files, the file layout is composed of the component of the file, which is placed on an MDT, and the rest of components are placed on OSTs, if needed. The first component is placed on the MDT in the MDT object data blocks. This component always has one stripe with size equal to the component size. Such a component with an MDT layout can be only the first component in composite layout. The rest of components are placed over OSTs as usual with a RAID0 layout. The OST components are not instantiated until a client writes or truncates the file beyond the size of the MDT component.
 
 ## User Commands
 
@@ -30,7 +30,7 @@ lfs setstripe --component-end|-E end1 --layout|-L mdt \
 
 The command above creates a file with the special composite layout, which defines the first component as an MDT component. The MDT component must start from offset 0 and ends at *end1*. The *end1* is also the stripe size of this component, and is limited by the `lod.*.dom_stripesize` of the MDT the file is created on. No other options are required for this component. The rest of the components use the normal syntax for composite files creation.
 
-### Note
+**Note**
 
 If the next component doesn't specify striping, such as:
 
@@ -49,7 +49,7 @@ client$ lfs setstripe -E 1M -L mdt -E -1 -S 4M -c -1 \
           /mnt/lustre/domfile
 ```
 
-The resulting layout is illustrated by [Figure 17, “Resulting file layout”](ch20s02s01s02.html#dataonmdt.fig.layout1).
+The resulting layout is illustrated by Figure 17, “Resulting file layout”.
 
 **Figure 17. Resulting file layout**
 
@@ -205,7 +205,7 @@ client$ lfs getstripe /mnt/lustre/domdir/domfile
 
 We can see that first file **normfile** in that directory has an ordinary layout, whereas the file **domfile** inherits the directory default layout and is a DoM file.
 
-### Note
+**Note**
 
 The directory default layout setting will be inherited by new files even if the server DoM size limit will be set to a lower value.
 
@@ -215,11 +215,11 @@ The maximum size of a DoM component is restricted in several ways to protect the
 
 #### LFS limits for DoM component size
 
-`lfs setstripe` allows for setting the component size for MDT layouts up to 1GB (this is a compile-time limit to avoid improper configuration), however, the size must also be aligned by 64KB due to the minimum stripe size in Lustre (see [Table 4, “File and file system limits”](ch05s04.html#settinguplustresystem.tab2) `Minimum stripe size`). There is also a limit imposed on each file by `lfs setstripe -E end` that may be smaller than the MDT-imposed limit if this is better for a particular usage.
+`lfs setstripe` allows for setting the component size for MDT layouts up to 1GB (this is a compile-time limit to avoid improper configuration), however, the size must also be aligned by 64KB due to the minimum stripe size in Lustre (see Table 4, “File and file system limits”`Minimum stripe size`). There is also a limit imposed on each file by `lfs setstripe -E end` that may be smaller than the MDT-imposed limit if this is better for a particular usage.
 
 #### MDT Server Limits
 
-The `lod.$fsname-MDTxxxx.dom_stripesize` is used to control the per-MDT maximum size for a DoM component. Larger DoM components specified by the user will be truncated to the MDT-specified limit, and as such may be different on each MDT to balance DoM space usage on each MDT separately, if needed. It is 1MB by default and can be changed with the `lctl` tool. For more information on setting `dom_stripesize` please see [the section called “ The dom_stripesize parameter”](dbdoclet.dom_stripesize.html).
+The `lod.$fsname-MDTxxxx.dom_stripesize` is used to control the per-MDT maximum size for a DoM component. Larger DoM components specified by the user will be truncated to the MDT-specified limit, and as such may be different on each MDT to balance DoM space usage on each MDT separately, if needed. It is 1MB by default and can be changed with the `lctl` tool. For more information on setting `dom_stripesize` please see *the section called “ The dom_stripesize parameter”*.
 
 ### lfs getstripe for DoM files
 
@@ -384,6 +384,6 @@ New settings are applied in few seconds and saved persistently in server config.
 
 When `lctl set_param` or `lctl conf_param` sets `dom_stripesize` to `0`, DoM component creation will be disabled on the selected server, and any *new* layouts with a specified DoM component will have that component removed from the file layout. Existing files and layouts with DoM components on that MDT are not changed.
 
-### Note
+**Note**
 
 DoM files can still be created in existing directories with a default DoM layout.
