--- a/04.01-Testing Lustre Network Performance (LNet Self-Test).md
+++ b/04.01-Testing Lustre Network Performance (LNet Self-Test).md
@@ -10,17 +10,15 @@ This chapter describes the LNet self-test, which is used by site administrators 
 
 ## LNet Self-Test Overview
 
-- [Prerequisites](ch31s01s01.html)
-
 LNet self-test is a kernel module that runs over LNet and the Lustre network drivers (LNDs). It is designed to:
 
 - Test the connection ability of the Lustre network
 - Run regression tests of the Lustre network
 - Test performance of the Lustre network
 
-After you have obtained performance results for your Lustre network, refer to [*Tuning a Lustre File System*](lustretuning.html) for information about parameters that can be used to tune LNet for optimum performance.
+After you have obtained performance results for your Lustre network, refer to *Tuning a Lustre File System* for information about parameters that can be used to tune LNet for optimum performance.
 
-### Note
+**Note**
 
 Apart from the performance impact, LNet self-test is invisible to the Lustre file system.
 
@@ -65,7 +63,7 @@ This section describes how to create and run an LNet self-test. The examples sho
 
 ### Creating a Session
 
-A *session* is a set of processes that run on a *test node*. Only one session can be run at a time on a test node to ensure that the session has exclusive use of the node. The console node is used to create, change or destroy a session (`new_session`, `end_session`, `show_session`). For more about session parameters, see [the section called “Session Commands”](dbdoclet.50438223_91247.html).
+A *session* is a set of processes that run on a *test node*. Only one session can be run at a time on a test node to ensure that the session has exclusive use of the node. The console node is used to create, change or destroy a session (`new_session`, `end_session`, `show_session`). For more about session parameters, see *the section called “Session Commands”*.
 
 Almost all operations should be performed within the context of a session. From the *console node*, a user can only operate nodes in his own session. If a session ends, the session context in all test nodes is stopped.
 
@@ -127,7 +125,7 @@ lst add_test --batch bulk_rw --from writers --to servers \
   brw write check=full size=4K
 ```
 
-The traffic pattern and test intensity is determined by several properties such as test type, distribution of test nodes, concurrency of test, and RDMA operation type. For more details, see [the section called “Batch and Test Commands”](dbdoclet.50438223_36860.html).
+The traffic pattern and test intensity is determined by several properties such as test type, distribution of test nodes, concurrency of test, and RDMA operation type. For more details, see *the section called “Batch and Test Commands”*.
 
 ### Sample Script
 
@@ -189,7 +187,7 @@ Example:
 export LST_SESSION=$$
 ```
 
-**new_session [--timeout SECONDS] [--force] SESSNAME**
+**new_session [ --timeout SECONDS ]** **[ -- force ] SESSNAME**
 
 Creates a new session session named *SESSNAME*.
 
@@ -356,19 +354,19 @@ add_test --batch batchname [--loop loop_count] [--concurrency active_count] [--d
 
 Adds a test to a batch. The parameters are described below.
 
-| **Parameter**                              | **Description**                                              |                                                              |
-| ------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| `--batch *batchname*`                      | Names a group of tests for later execution.                  |                                                              |
-| `--loop *loop_count*`                      | Number of times to run the test.                             |                                                              |
-| `--concurrency *active_count*`             | The number of requests that are active at one time.          |                                                              |
-| `--distribute *source_count*:*sink_count*` | Determines the ratio of client nodes to server nodes for the specified test. This allows you to specify a wide range of topologies, including one-to-one and all-to-all. Distribution divides the source group into subsets, which are paired with equivalent subsets from the target group so only nodes in matching subsets communicate. |                                                              |
-| `--from *group*`                           | The source group (test client).                              |                                                              |
-| `--to *group*`                             | The target group (test server).                              |                                                              |
-| `ping`                                     | Sends a small request message, resulting in a small reply message. For more details, see [the section called “Defining and Running the Tests”](dbdoclet.50438223_42848.html). `ping` does not have any additional options. |                                                              |
-| `brw`                                      | Sends a small request message followed by a bulk data transfer, resulting in a small reply message. [the section called “Defining and Running the Tests”](dbdoclet.50438223_42848.html). Options are: |                                                              |
-|                                            | `read | write`                                               | Read or write. The default is read.                          |
-|                                            | `size=*bytes[KM]*`                                           | I/O size in bytes, kilobytes, or Megabytes (i.e., `size=1024`, `size=4K`, `size=1M`). The default is 4 kilobytes. |
-|                                            | `check=full|simple`                                          | A data validation check (checksum of data). The default is that no check is done. |
+| **Parameter**                              | **Description**                                              |
+| ------------------------------------------ | ------------------------------------------------------------ |
+| `--batch *batchname*`                      | Names a group of tests for later execution.                  |
+| `--loop *loop_count*`                      | Number of times to run the test.                             |
+| `--concurrency *active_count*`             | The number of requests that are active at one time.          |
+| `--distribute *source_count*:*sink_count*` | Determines the ratio of client nodes to server nodes for the specified test. This allows you to specify a wide range of topologies, including one-to-one and all-to-all. Distribution divides the source group into subsets, which are paired with equivalent subsets from the target group so only nodes in matching subsets communicate. |
+| `--from *group*`                           | The source group (test client).                              |
+| `--to *group*`                             | The target group (test server).                              |
+| `ping`                                     | Sends a small request message, resulting in a small reply message. For more details, see *the section called “Defining and Running the Tests”*. `ping` does not have any additional options. |
+| `brw`                                      | Sends a small request message followed by a bulk data transfer, resulting in a small reply message. *the section called “Defining and Running the Tests”*. Options are: |
+| `read | write`                             | Read or write. The default is read.                          |
+| `size=*bytes[KM]*`                         | I/O size in bytes, kilobytes, or Megabytes (i.e., `size=1024`, `size=4K`, `size=1M`). The default is 4 kilobytes. |
+| `check=full|simple`                        | A data validation check (checksum of data). The default is that no check is done. |
 
 **Examples showing use of the distribute parameter:**
 
@@ -405,16 +403,16 @@ In the example above, a batch test called bulkperf that will do a 16 kbyte bulk 
 - `192.168.1.[10-13]` will write to `192.168.10.[100,101]`
 - `192.168.1.[14-17]` will write to `192.168.10.[102,103]`
 
-**list_batch [name][--test index] [--active][--invalid] [--server|client]**
+**list_batch [name]** **[--test index]** **[--active]** **[--invalid]** **[--server|client]**
 
 Lists batches in the current session or lists client and server nodes in a batch or a test.
 
-| **Parameter**    | **Description**                                              |                                                |
-| ---------------- | ------------------------------------------------------------ | ---------------------------------------------- |
-| `--test *index*` | Lists tests in a batch. If no option is used, all tests in the batch are listed. If one of these options are used, only specified tests in the batch are listed: |                                                |
-|                  | `active`                                                     | Lists only active batch tests.                 |
-|                  | `invalid`                                                    | Lists only invalid batch tests.                |
-|                  | `server | client`                                            | Lists client and server nodes in a batch test. |
+| **Parameter**     | **Description**                                              |      |
+| ----------------- | ------------------------------------------------------------ | ---- |
+| `--test *index*`  | Lists tests in a batch. If no option is used, all tests in the batch are listed. If one of these options are used, only specified tests in the batch are listed: |      |
+| `active`          | Lists only active batch tests.                               |      |
+| `invalid`         | Lists only invalid batch tests.                              |      |
+| `server | client` | Lists client and server nodes in a batch test.               |      |
 
 **Example:**
 
@@ -454,7 +452,7 @@ $ lst stop bulkperf
 
 ```
 
-**query name [--test index][--timeout seconds] [--loop loopcount][--delay seconds] [--all]**
+**query name [--test index]** **[--timeout seconds]** **[--loop loopcount]** **[--delay seconds]** **[--all]**
 
 Queries the batch status.
 
