--- a/04.03-Tuning a Lustre File System.md
+++ b/04.03-Tuning a Lustre File System.md
@@ -241,7 +241,7 @@ By default, the Lustre software will automatically generate CPU partitions (CPT)
 
 Introduced in Lustre 2.9In Lustre 2.9 and later the default is to use one CPT per NUMA node. In earlier versions of Lustre, by default there was a single CPT if the online CPU core count was four or fewer, and additional CPTs would be created depending on the number of CPU cores, typically with 4-8 cores per CPT.
 
-### Tip
+**Tip**
 
 Setting `cpu_npartitions=1` will disable most of the SMP Node Affinity functionality.
 
@@ -730,7 +730,7 @@ Next, the different types of TBF policies will be described.
 
 - **JobID based TBF policy**
 
-  For the JobID, please see [the section called “ Lustre Jobstats”](dbdoclet.jobstats.html) for more details.
+  For the JobID, please see *the section called “ Lustre Jobstats”* for more details.
 
   Command:
 
