--- a/05.01-Lustre File System Troubleshooting.md
+++ b/05.01-Lustre File System Troubleshooting.md
@@ -260,7 +260,7 @@ filesystem_summary:        21.6T       17.8T        3.2T  85% /myth
         
 ```
 
-To address this issue, you can expand the disk space on the OST, or use the `lfs_migrate` command to migrate (move) files to a less full OST. For details on both of these options see [the section called “ Adding a New OST to a Lustre File System”](dbdoclet.adding_new_ost.html)
+To address this issue, you can expand the disk space on the OST, or use the `lfs_migrate` command to migrate (move) files to a less full OST. For details on both of these options see *the section called “ Adding a New OST to a Lustre File System”*.
 
 Introduced in Lustre 2.6In some cases, there may be processes holding files open that are consuming a significant amount of space (e.g. runaway process writing lots of data to an open file that has been deleted). It is possible to get a list of all open file handles in the filesystem from the MDS:`mds# lctl get_param mdt.*.exports.*.open_files mdt.myth-MDT0000.exports.192.168.20.159@tcp.open_files= [0x200003ab4:0x435:0x0] [0x20001e863:0x1c1:0x0] [0x20001e863:0x1c2:0x0] : :         `These file handles can be converted into pathnames on any client via the `lfs fid2path` command (as root):`client# lfs fid2path /myth [0x200003ab4:0x435:0x0] [0x20001e863:0x1c1:0x0] [0x20001e863:0x1c2:0x0] lfs fid2path: cannot find '[0x200003ab4:0x435:0x0]': No such file or directory /myth/tmp/4M /myth/tmp/1G : :         `In some cases, if the file has been deleted from the filesystem, `fid2path` will return an error that the file is not found. You can use the client NID (`192.168.20.159@tcp` in the above example) to determine which node the file is open on, and `lsof` to find and kill the process that is holding the file open:`# lsof /myth COMMAND   PID   USER  FD TYPE    DEVICE      SIZE/OFF               NODE NAME logger  13806 mythtv  0r REG  35,632494 1901048576384 144115440203858997 /myth/logs/job.1283929.log (deleted) 	`
 
@@ -282,7 +282,7 @@ filesystem_summary:      1910263     1910263           0 100% /myth
 
 Typically, the Lustre software reports this error to your application. If the application is checking the return code from its function calls, then it decodes it into a textual error message such as `No space left on device`. The numeric error message may also appear in the system log.
 
-For more information about the `lfs df` command, see [the section called “Checking File System Free Space”](dbdoclet.checking_free_space.html).
+For more information about the `lfs df` command, see *the section called “Checking File System Free Space”*.
 
 You can also use the `lctl get_param` command to monitor the space and object usage on the OSTs and MDTs from any client:
 
