--- a/05.02-Troubleshooting Recovery.md
+++ b/05.02-Troubleshooting Recovery.md
@@ -68,7 +68,7 @@ The simplest problem to resolve is that of orphaned objects. When the LFSCK layo
 
 Introduced in Lustre 2.7With Lustre version 2.7 and later, LFSCK will identify and process orphan objects found on MDTs as well.
 
- Recovering from an Unavailable OST
+## Recovering from an Unavailable OST
 
 One problem encountered in a Lustre file system environment is when an OST becomes unavailable due to a network partition, OSS node crash, etc. When this happens, the OST's clients pause and wait for the OST to become available again, either on the primary OSS or a failover OSS. When the OST comes back online, the Lustre file system starts a recovery process to enable clients to reconnect to the OST. Lustre servers put a limit on the time they will wait in recovery for clients to reconnect.
 
@@ -131,18 +131,18 @@ The various `lfsck_start` options are listed and described below. For a complete
 | **Option**                   | **Description**                                              |
 | ---------------------------- | ------------------------------------------------------------ |
 | `-M | --device`              | The MDT or OST target to start LFSCK on.                     |
-| `-A | --all`                 | Introduced in Lustre 2.6Start LFSCK on all targets on all servers simultaneously. By default, both layout and namespace consistency checking and repair are started. |
-| `-c | --create_ostobj`       | Introduced in Lustre 2.6Create the lost OST-object for dangling LOV EA, `off`(default) or `on`. If not specified, then the default behaviour is to keep the dangling LOV EA there without creating the lost OST-object. |
-| `-C | --create_mdtobj`       | Introduced in Lustre 2.7Create the lost MDT-object for dangling name entry, `off`(default) or `on`. If not specified, then the default behaviour is to keep the dangling name entry there without creating the lost MDT-object. |
-| `-d | --delay_create_ostobj` | Introduced in Lustre 2.9Delay creating the lost OST-object for dangling LOV EA until the orphan OST-objects are handled. `off`(default) or `on`. |
+| `-A | --all`                 | Introduced in Lustre 2.6                                                                                        Start LFSCK on all targets on all servers simultaneously. By default, both layout and namespace consistency checking and repair are started. |
+| `-c | --create_ostobj`       | Introduced in Lustre 2.6                                                                                            Create the lost OST-object for dangling LOV EA, `off`(default) or `on`. If not specified, then the default behaviour is to keep the dangling LOV EA there without creating the lost OST-object. |
+| `-C | --create_mdtobj`       | Introduced in Lustre 2.7                                                                                           Create the lost MDT-object for dangling name entry, `off`(default) or `on`. If not specified, then the default behaviour is to keep the dangling name entry there without creating the lost MDT-object. |
+| `-d | --delay_create_ostobj` | Introduced in Lustre 2.9                                                                                                Delay creating the lost OST-object for dangling LOV EA until the orphan OST-objects are handled. `off`(default) or `on`. |
 | `-e | --error`               | Error handle, `continue`(default) or `abort`. Specify whether the LFSCK will stop or not if fails to repair something. If it is not specified, the saved value (when resuming from checkpoint) will be used if present. This option cannot be changed while LFSCK is running. |
 | `-h | --help`                | Operating help information.                                  |
 | `-n | --dryrun`              | Perform a trial without making any changes. `off`(default) or `on`. |
-| `-o | --orphan`              | Introduced in Lustre 2.6Repair orphan OST-objects for layout LFSCK. |
+| `-o | --orphan`              | Introduced in Lustre 2.6                                                                                                     Repair orphan OST-objects for layout LFSCK. |
 | `-r | --reset`               | Reset the start position for the object iteration to the beginning for the specified MDT. By default the iterator will resume scanning from the last checkpoint (saved periodically by LFSCK) provided it is available. |
 | `-s | --speed`               | Set the upper speed limit of LFSCK processing in objects per second. If it is not specified, the saved value (when resuming from checkpoint) or default value of 0 (0 = run as fast as possible) is used. Speed can be adjusted while LFSCK is running with the adjustment interface. |
-| `-t | --type`                | The type of checking/repairing that should be performed. The new LFSCK framework provides a single interface for a variety of system consistency checking/repairing operations including:Without a specified option, the LFSCK component(s) which ran last time and did not finish or the component(s) corresponding to some known system inconsistency, will be started. Anytime the LFSCK is triggered, the OI scrub will run automatically, so there is no need to specify OI_scrub in that case.Introduced in Lustre 2.4`namespace`: check and repair FID-in-dirent and LinkEA consistency.Introduced in Lustre 2.7Lustre-2.7 enhances namespace consistency verification under DNE mode.Introduced in Lustre 2.6`layout`: check and repair MDT-OST inconsistency. |
-| `-w | --window_size`         | Introduced in Lustre 2.6The window size for the async request pipeline. The LFSCK async request pipeline's input/output may have quite different processing speeds, and there may be too many requests in the pipeline as to cause abnormal memory/network pressure. If not specified, then the default window size for the async request pipeline is 1024. |
+| `-t | --type`                | The type of checking/repairing that should be performed. The new LFSCK framework provides a single interface for a variety of system consistency checking/repairing operations including:                                                            Without a specified option, the LFSCK component(s) which ran last time and did not finish or the component(s) corresponding to some known system inconsistency, will be started. Anytime the LFSCK is triggered, the OI scrub will run automatically, so there is no need to specify OI_scrub in that case.       Introduced in Lustre 2.4                                                                               `namespace`: check and repair FID-in-dirent and LinkEA consistency.              Introduced in Lustre 2.7                                                                                      Lustre-2.7 enhances namespace consistency verification under DNE mode.Introduced in Lustre 2.6`layout`: check and repair MDT-OST inconsistency. |
+| `-w | --window_size`         | Introduced in Lustre 2.6                                                                                                      The window size for the async request pipeline. The LFSCK async request pipeline's input/output may have quite different processing speeds, and there may be too many requests in the pipeline as to cause abnormal memory/network pressure. If not specified, then the default window size for the async request pipeline is 1024. |
 
 #### Manually Stopping LFSCK
 
@@ -212,8 +212,8 @@ lctl get_param -n osd-ldiskfs.FSNAME-[MDT_target|OST_target].oi_scrub
 
 | **Information**     | **Detail**                                                   |
 | ------------------- | ------------------------------------------------------------ |
-| General Information | Name: OI_scrub.OI scrub magic id (an identifier unique to OI scrub).OI files count.Status: one of the status - `init`, `scanning`, `completed`, `failed`, `stopped`, `paused`, or`crashed`.Flags: including - `recreated`(OI file(s) is/are removed/recreated), `inconsistent`(restored from file-level backup), `auto`(triggered by non-UI mechanism), and `upgrade`(from Lustre software release 1.8 IGIF format.)Parameters: OI scrub parameters, like `failout`.Time Since Last Completed.Time Since Latest Start.Time Since Last Checkpoint.Latest Start Position: the position for the latest scrub started from.Last Checkpoint Position.First Failure Position: the position for the first object to be repaired.Current Position. |
-| Statistics          | `Checked` total number of objects scanned.`Updated` total number of objects repaired.`Failed` total number of objects that failed to be repaired.`No Scrub` total number of objects marked `LDISKFS_STATE_LUSTRE_NOSCRUB and skipped`.`IGIF` total number of objects IGIF scanned.`Prior Updated` how many objects have been repaired which are triggered by parallel RPC.`Success Count` total number of completed OI_scrub runs on the target.`Run Time` how long the scrub has run, tally from the time of scanning from the beginning of the specified MDT target, not include the paused/failure time among checkpoints.`Average Speed` calculated by dividing `Checked` by `run_time`.`Real-Time Speed` the speed since last checkpoint if the OI_scrub is running.`Scanned` total number of objects under /lost+found that have been scanned.`Repaired` total number of objects under /lost+found that have been recovered.`Failed` total number of objects under /lost+found failed to be scanned or failed to be recovered. |
+| General Information | - Name: OI_scrub.                                                                                                                                               - OI scrub magic id (an identifier unique to OI scrub).                                                                                              - OI files count.                                                                                                                            --- Status: one of the status - `init`, `scanning`, `completed`, `failed`, `stopped`, `paused`, or`crashed`.                                                                                                                           - Flags: including - `recreated`(OI file(s) is/are removed/recreated), `inconsistent`(restored from file-level backup), `auto`(triggered by non-UI mechanism), and `upgrade`(from Lustre software release 1.8 IGIF format.)                              - Parameters: OI scrub parameters, like `failout`.                                                                 - Time Since Last Completed.                                                                                                            - Time Since Latest Start.                                                                                                              - Time Since Last Checkpoint.                                                                                                               - Latest Start Position: the position for the latest scrub started from.                                        - Last Checkpoint Position.                                                                                                                - First Failure Position: the position for the first object to be repaired.                                  - Current Position. |
+| Statistics          | - `Checked` total number of objects scanned.                                                                              - `Updated` total number of objects repaired.                                                                              - `Failed` total number of objects that failed to be repaired.                                                  - `No Scrub` total number of objects marked `LDISKFS_STATE_LUSTRE_NOSCRUB and skipped`.                                                                                                                                             - `IGIF` total number of objects IGIF scanned.                                                                                        - `Prior Updated` how many objects have been repaired which are triggered by parallel RPC.                                                                                                                                                        - `Success Count` total number of completed OI_scrub runs on the target.                           - `Run Time` how long the scrub has run, tally from the time of scanning from the beginning of the specified MDT target, not include the paused/failure time among checkpoints.                                                                                                                                           - `Average Speed` calculated by dividing `Checked` by `run_time`.                                               - `Real-Time Speed` the speed since last checkpoint if the OI_scrub is running.                   - `Scanned` total number of objects under /lost+found that have been scanned.                   - `Repaired` total number of objects under /lost+found that have been recovered.               - `Failed` total number of objects under /lost+found failed to be scanned or failed to be recovered. |
 
 
 
@@ -237,8 +237,8 @@ lctl get_param -n mdd. FSNAME-MDT_target.lfsck_namespace
 
 | **Information**     | **Detail**                                                   |
 | ------------------- | ------------------------------------------------------------ |
-| General Information | Name: `lfsck_namespace`LFSCK namespace magic.LFSCK namespace version..Status: one of the status - `init`, `scanning-phase1`, `scanning-phase2`, `completed`, `failed`,`stopped`, `paused`, `partial`, `co-failed`, `co-stopped` or `co-paused`.Flags: including - `scanned-once`(the first cycle scanning has been completed),`inconsistent`(one or more inconsistent FID-in-dirent or LinkEA entries that have been discovered), `upgrade`(from Lustre software release 1.8 IGIF format.)Parameters: including `dryrun`, `all_targets`, `failout`, `broadcast`, `orphan`, `create_ostobj`and `create_mdtobj`.Time Since Last Completed.Time Since Latest Start.Time Since Last Checkpoint.Latest Start Position: the position the checking began most recently.Last Checkpoint Position.First Failure Position: the position for the first object to be repaired.Current Position. |
-| Statistics          | `Checked Phase1` total number of objects scanned during `scanning-phase1`.`Checked Phase2` total number of objects scanned during `scanning-phase2`.`Updated Phase1` total number of objects repaired during `scanning-phase1`.`Updated Phase2` total number of objects repaired during `scanning-phase2`.`Failed Phase1` total number of objets that failed to be repaired during `scanning-phase1`.`Failed Phase2` total number of objets that failed to be repaired during `scanning-phase2`.`directories` total number of directories scanned.`multiple_linked_checked` total number of multiple-linked objects that have been scanned.`dirent_repaired` total number of FID-in-dirent entries that have been repaired.`linkea_repaired` total number of linkEA entries that have been repaired.`unknown_inconsistency` total number of undefined inconsistencies found in scanning-phase2.`unmatched_pairs_repaired` total number of unmatched pairs that have been repaired.`dangling_repaired` total number of dangling name entries that have been found/repaired.`multi_referenced_repaired` total number of multiple referenced name entries that have been found/repaired.`bad_file_type_repaired` total number of name entries with bad file type that have been repaired.`lost_dirent_repaired` total number of lost name entries that have been re-inserted.`striped_dirs_scanned` total number of striped directories (master) that have been scanned.`striped_dirs_repaired` total number of striped directories (master) that have been repaired.`striped_dirs_failed` total number of striped directories (master) that have failed to be verified.`striped_dirs_disabled` total number of striped directories (master) that have been disabled.`striped_dirs_skipped` total number of striped directories (master) that have been skipped (for shards verification) because of lost master LMV EA.`striped_shards_scanned` total number of striped directory shards (slave) that have been scanned.`striped_shards_repaired` total number of striped directory shards (slave) that have been repaired.`striped_shards_failed` total number of striped directory shards (slave) that have failed to be verified.`striped_shards_skipped` total number of striped directory shards (slave) that have been skipped (for name hash verification) because LFSCK does not know whether the slave LMV EA is valid or not.`name_hash_repaired` total number of name entries under striped directory with bad name hash that have been repaired.`nlinks_repaired` total number of objects with nlink fixed.`mul_linked_repaired` total number of multiple-linked objects that have been repaired.`local_lost_found_scanned` total number of objects under /lost+found that have been scanned.`local_lost_found_moved` total number of objects under /lost+found that have been moved to namespace visible directory.`local_lost_found_skipped` total number of objects under /lost+found that have been skipped.`local_lost_found_failed` total number of objects under /lost+found that have failed to be processed.`Success Count` the total number of completed LFSCK runs on the target.`Run Time Phase1` the duration of the LFSCK run during `scanning-phase1`. Excluding the time spent paused between checkpoints.`Run Time Phase2` the duration of the LFSCK run during `scanning-phase2`. Excluding the time spent paused between checkpoints.`Average Speed Phase1` calculated by dividing `checked_phase1` by `run_time_phase1`.`Average Speed Phase2` calculated by dividing `checked_phase2` by `run_time_phase1`.`Real-Time Speed Phase1` the speed since the last checkpoint if the LFSCK is running`scanning-phase1`.`Real-Time Speed Phase2` the speed since the last checkpoint if the LFSCK is running`scanning-phase2`. |
+| General Information | - Name: `lfsck_namespace`                                                                                                           - LFSCK namespace magic.                                                                                                              - LFSCK namespace version..                                                                                                           - Status: one of the status - `init`, `scanning-phase1`, `scanning-phase2`, `completed`, `failed`,`stopped`, `paused`, `partial`, `co-failed`, `co-stopped` or `co-paused`.                                                                                                                        - Flags: including - `scanned-once`(the first cycle scanning has been completed),`inconsistent`(one or more inconsistent FID-in-dirent or LinkEA entries that have been discovered), `upgrade`(from Lustre software release 1.8 IGIF format.)                                                                                                                - Parameters: including `dryrun`, `all_targets`, `failout`, `broadcast`, `orphan`, `create_ostobj`and `create_mdtobj`.                                                                                             - Time Since Last Completed.                                                                                                                - Time Since Latest Start.                                                                                                                  - Time Since Last Checkpoint.                                                                                                               - Latest Start Position: the position the checking began most recently.                                                                                                                                                - Last Checkpoint Position.                                                                                                             - First Failure Position: the position for the first object to be repaired.                                      - Current Position. |
+| Statistics          | - `Checked Phase1` total number of objects scanned during `scanning-phase1`.                - `Checked Phase2` total number of objects scanned during `scanning-phase2`.                - `Updated Phase1` total number of objects repaired during `scanning-phase1`.                                                                                                                              - `Updated Phase2` total number of objects repaired during `scanning-phase2`.                  - `Failed Phase1` total number of objets that failed to be repaired during `scanning-phase1`.                                                                                                                                               - `Failed Phase2` total number of objets that failed to be repaired during `scanning-phase2`.                                                                                                                                                 - `directories` total number of directories scanned.                                                                                                                                                                          - `multiple_linked_checked` total number of multiple-linked objects that have been scanned.                                                                                                                                                  - `dirent_repaired` total number of FID-in-dirent entries that have been repaired.                                                                                                          - `linkea_repaired` total number of linkEA entries that have been repaired.                                                                                                          - `unknown_inconsistency` total number of undefined inconsistencies found in scanning-phase2.                                                                                                                            - `unmatched_pairs_repaired` total number of unmatched pairs that have been repaired.                                                                                                                                                      - `dangling_repaired` total number of dangling name entries that have been found/repaired.                                                                                                                                          - `multi_referenced_repaired` total number of multiple referenced name entries that have been found/repaired.                                                                                                                                   - `bad_file_type_repaired` total number of name entries with bad file type that have been repaired.                                                                                                                                           - `lost_dirent_repaired` total number of lost name entries that have been re-inserted.                                                                                                                                                   - `striped_dirs_scanned` total number of striped directories (master) that have been scanned.                                                                                                                                               - `striped_dirs_repaired` total number of striped directories (master) that have been repaired.                                                                                                                                                    - `striped_dirs_failed` total number of striped directories (master) that have failed to be verified.                                                                                                                                              - `striped_dirs_disabled` total number of striped directories (master) that have been disabled.                                                                                                                                                - `striped_dirs_skipped` total number of striped directories (master) that have been skipped (for shards verification) because of lost master LMV EA.                                                                                                          - `striped_shards_scanned` total number of striped directory shards (slave) that have been scanned.                                                                                                                                         - `striped_shards_repaired` total number of striped directory shards (slave) that have been repaired.                                                                                                                                          - `striped_shards_failed` total number of striped directory shards (slave) that have failed to be verified.                                                                                                                                      - `striped_shards_skipped` total number of striped directory shards (slave) that have been skipped (for name hash verification) because LFSCK does not know whether the slave LMV EA is valid or not.                                                                                                          - `name_hash_repaired` total number of name entries under striped directory with bad name hash that have been repaired.                                                                                                          - `nlinks_repaired` total number of objects with nlink fixed.                                                                                                          - `mul_linked_repaired` total number of multiple-linked objects that have been repaired.                                                                                                                                                        - `local_lost_found_scanned` total number of objects under /lost+found that have been scanned.                                                                                                                                                                            - `local_lost_found_moved` total number of objects under /lost+found that have been moved to namespace visible directory.                                                                                                       - `local_lost_found_skipped` total number of objects under /lost+found that have been skipped.                                                                                                                                                                                    - `local_lost_found_failed` total number of objects under /lost+found that have failed to be processed.                                                                                                                                                                   - `Success Count` the total number of completed LFSCK runs on the target.                                                                                                          - `Run Time Phase1` the duration of the LFSCK run during `scanning-phase1`. Excluding the time spent paused between checkpoints.                                                                                                          - `Run Time Phase2` the duration of the LFSCK run during `scanning-phase2`. Excluding the time spent paused between checkpoints.                                                                                                          - `Average Speed Phase1` calculated by dividing `checked_phase1` by `run_time_phase1`.                                                                                                                                       - `Average Speed Phase2` calculated by dividing `checked_phase2` by `run_time_phase1`.                                                                                                                                                  - `Real-Time Speed Phase1` the speed since the last checkpoint if the LFSCK is running`scanning-phase1`.                                                                                                                                        - `Real-Time Speed Phase2` the speed since the last checkpoint if the LFSCK is running`scanning-phase2`. |
 
 
 
@@ -267,8 +267,8 @@ OST_target.lfsck_layout
 
 | **Information**     | **Detail**                                                   |
 | ------------------- | ------------------------------------------------------------ |
-| General Information | Name: `lfsck_layout`LFSCK namespace magic.LFSCK namespace version..Status: one of the status - `init`, `scanning-phase1`, `scanning-phase2`, `completed`, `failed`,`stopped`, `paused`, `crashed`, `partial`, `co-failed`, `co-stopped`, or `co-paused`.Flags: including - `scanned-once`(the first cycle scanning has been completed),`inconsistent`(one or more MDT-OST inconsistencies have been discovered),`incomplete`(some MDT or OST did not participate in the LFSCK or failed to finish the LFSCK) or `crashed_lastid`(the lastid files on the OST crashed and needs to be rebuilt).Parameters: including `dryrun`, `all_targets` and `failout`.Time Since Last Completed.Time Since Latest Start.Time Since Last Checkpoint.Latest Start Position: the position the checking began most recently.Last Checkpoint Position.First Failure Position: the position for the first object to be repaired.Current Position. |
-| Statistics          | `Success Count:` the total number of completed LFSCK runs on the target.`Repaired Dangling:` total number of MDT-objects with dangling reference have been repaired in the scanning-phase1.`Repaired Unmatched Pairs` total number of unmatched MDT and OST-object pairs have been repaired in the scanning-phase1`Repaired Multiple Referenced` total number of OST-objects with multiple reference have been repaired in the scanning-phase1.`Repaired Orphan` total number of orphan OST-objects have been repaired in the scanning-phase2.`Repaired Inconsistent Owner` total number.of OST-objects with incorrect owner information have been repaired in the scanning-phase1.`Repaired Others` total number of.other inconsistency repaired in the scanning phases.`Skipped` Number of skipped objects.`Failed Phase1` total number of objects that failed to be repaired during `scanning-phase1`.`Failed Phase2` total number of objects that failed to be repaired during `scanning-phase2`.`Checked Phase1` total number of objects scanned during `scanning-phase1`.`Checked Phase2` total number of objects scanned during `scanning-phase2`.`Run Time Phase1` the duration of the LFSCK run during `scanning-phase1`. Excluding the time spent paused between checkpoints.`Run Time Phase2` the duration of the LFSCK run during `scanning-phase2`. Excluding the time spent paused between checkpoints.`Average Speed Phase1` calculated by dividing `checked_phase1` by `run_time_phase1`.`Average Speed Phase2` calculated by dividing `checked_phase2` by `run_time_phase1`.`Real-Time Speed Phase1` the speed since the last checkpoint if the LFSCK is running`scanning-phase1`.`Real-Time Speed Phase2` the speed since the last checkpoint if the LFSCK is running`scanning-phase2`. |
+| General Information | - Name: `lfsck_layout`                                                                                                                                                   - LFSCK namespace magic.LFSCK namespace version..                                                                                                                                                   - Status: one of the status - `init`, `scanning-phase1`, `scanning-phase2`, `completed`, `failed`,`stopped`, `paused`, `crashed`, `partial`, `co-failed`, `co-stopped`, or `co-paused`.                                                                                                                                                   - Flags: including - `scanned-once`(the first cycle scanning has been completed),`inconsistent`(one or more MDT-OST inconsistencies have been discovered),`incomplete`(some MDT or OST did not participate in the LFSCK or failed to finish the LFSCK) or `crashed_lastid`(the lastid files on the OST crashed and needs to be rebuilt).                                                                                                                                                   - Parameters: including `dryrun`, `all_targets` and `failout`.                                                                                                                                                   - Time Since Last Completed.                                                                                                                                                   - Time Since Latest Start.                                                                                                                                                   - Time Since Last Checkpoint.                                                                                                                                                   - Latest Start Position: the position the checking began most recently.                                                                                                                                                   - Last Checkpoint Position.                                                                                                                                                   - First Failure Position: the position for the first object to be repaired.                                                                                                                                                   - Current Position. |
+| Statistics          |                                                                                                                                                    - `Success Count:` the total number of completed LFSCK runs on the target.                                                                                                                                                   - `Repaired Dangling:` total number of MDT-objects with dangling reference have been repaired in the scanning-phase1.                                                                                                                                                   - `Repaired Unmatched Pairs` total number of unmatched MDT and OST-object pairs have been repaired in the scanning-phase1`Repaired Multiple Referenced` total number of OST-objects with multiple reference have been repaired in the scanning-phase1.                                                                                                                                                   - `Repaired Orphan` total number of orphan OST-objects have been repaired in the scanning-phase2.                                                                                                                                                   - `Repaired Inconsistent Owner` total number.of OST-objects with incorrect owner information have been repaired in the scanning-phase1.                                                                                                                                                   - `Repaired Others` total number of.other inconsistency repaired in the scanning phases.`Skipped` Number of skipped objects.                                                                                                                                                   - `Failed Phase1` total number of objects that failed to be repaired during `scanning-phase1`.                                                                                                                                                   - `Failed Phase2` total number of objects that failed to be repaired during `scanning-phase2`.                                                                                                                                                   - `Checked Phase1` total number of objects scanned during `scanning-phase1`.                                                                                                                                                   - `Checked Phase2` total number of objects scanned during `scanning-phase2`.                                                                                                                                                   - `Run Time Phase1` the duration of the LFSCK run during `scanning-phase1`. Excluding the time spent paused between checkpoints.                                                                                                                                                   - `Run Time Phase2` the duration of the LFSCK run during `scanning-phase2`. Excluding the time spent paused between checkpoints.                                                                                                                                                   - `Average Speed Phase1` calculated by dividing `checked_phase1` by `run_time_phase1`.                                                                                                                                                   - `Average Speed Phase2` calculated by dividing `checked_phase2` by `run_time_phase1`.                                                                                                                                                   - `Real-Time Speed Phase1` the speed since the last checkpoint if the LFSCK is running`scanning-phase1`.                                                                                                                                                   - `Real-Time Speed Phase2` the speed since the last checkpoint if the LFSCK is running`scanning-phase2`. |
 
 ### LFSCK adjustment interface
 
