--- a/05.03-Debugging a Lustre File System.md
+++ b/05.03-Debugging a Lustre File System.md
@@ -483,31 +483,33 @@ To use these macros, you will need to set the `DEBUG_SUBSYSTEM` variable at the 
 
 A list of available macros with descriptions is provided in the table below.
 
-| **Macro**                               | **Description**                                              |
-| --------------------------------------- | ------------------------------------------------------------ |
-| **LBUG()**                              | A panic-style assertion in the kernel which causes the Lustre file system to dump its circular log to the `/tmp/lustre-log` file. This file can be retrieved after a reboot. `LBUG()`freezes the thread to allow capture of the panic stack. A system reboot is needed to clear the thread. |
-| **LASSERT()**                           | Validates a given expression as true, otherwise calls LBUG(). The failed expression is printed on the console, although the values that make up the expression are not printed. |
-| **LASSERTF()**                          | Similar to `LASSERT()` but allows a free-format message to be printed, like `printf/printk`. |
-| **CDEBUG()**                            | The basic, most commonly used debug macro that takes just one more argument than standard `printf()` - the debug type. This message adds to the debug log with the debug mask set accordingly. Later, when a user retrieves the log for troubleshooting, they can filter based on this type.`CDEBUG(D_INFO, "debug message: rc=%d\n", number);` |
-| **CDEBUG_LIMIT()**                      | Behaves similarly to `CDEBUG()`, but rate limits this message when printing to the console (for `D_WARN`, `D_ERROR`, and `D_CONSOLE` message types. This is useful for messages that use a variable debug mask:`CDEBUG(mask, "maybe bad: rc=%d\n", rc);` |
-| **CERROR()**                            | Internally using `CDEBUG_LIMIT(D_ERROR, ...)`, which unconditionally prints the message in the debug log and to the console. This is appropriate for serious errors or fatal conditions. Messages printed to the console are prefixed with `LustreError:`, and are rate-limited, to avoid flooding the console with duplicates.`CERROR("Something bad happened: rc=%d\n", rc);` |
-| **CWARN()**                             | Behaves similarly to `CERROR()`, but prefixes the messages with `Lustre:`. This is appropriate for important, but not fatal conditions. Messages printed to the console are rate-limited. |
-| **CNETERR()**                           | Behaves similarly to `CERROR()`, but prints error messages for LNet if `D_NETERR` is set in the `debug` mask. This is appropriate for serious networking errors. Messages printed to the console are rate-limited. |
-| **DEBUG_REQ()**                         | Prints information about the given `ptlrpc_request` structure.`DEBUG_REQ(D_RPCTRACE, req, ""Handled RPC: rc=%d\n", rc);` |
-| **ENTRY**                               | Add messages to the entry of a function to aid in call tracing (takes no arguments). When using these macros, cover all exit conditions with a single `EXIT`, `GOTO()`, or `RETURN()` macro to avoid confusion when the debug log reports that a function was entered, but never exited. |
-| **EXIT**                                | Mark the exit of a function, to match `ENTRY` (takes no arguments). |
-| **GOTO()**                              | Mark when code jumps via `goto` to the end of a function, to match `ENTRY`, and prints out the goto label and function return code in signed and unsigned decimal, and hexadecimal format. |
-| **RETURN()**                            | Mark the exit of a function, to match `ENTRY`, and prints out the function return code in signed and unsigned decimal, and hexadecimal format. |
-| **LDLM_DEBUG()****LDLM_DEBUG_NOLOCK()** | Used when tracing LDLM locking operations. These macros build a thin trace that shows the locking requests on a node, and can also be linked across the client and server node using the printed lock handles. |
-| **OBD_FAIL_CHECK()**                    | Allows insertion of failure points into the Lustre source code. This is useful to generate regression tests that can hit a very specific sequence of events. This works in conjunction with "`lctl set_param fail_loc=*fail_loc*`" to set a specific failure point for which a given `OBD_FAIL_CHECK()` will test. |
-| **OBD_FAIL_TIMEOUT()**                  | Similar to `OBD_FAIL_CHECK()`. Useful to simulate hung, blocked or busy processes or network devices. If the given `fail_loc` is hit, `OBD_FAIL_TIMEOUT()` waits for the specified number of seconds. |
-| **OBD_RACE()**                          | Similar to `OBD_FAIL_CHECK()`. Useful to have multiple processes execute the same code concurrently to provoke locking races. The first process to hit `OBD_RACE()` sleeps until a second process hits `OBD_RACE()`, then both processes continue. |
-| **OBD_FAIL_ONCE**                       | A flag set on a `fail_loc` breakpoint to cause the `OBD_FAIL_CHECK()` condition to be hit only one time. Otherwise, a `fail_loc` is permanent until it is cleared with "`lctl set_param fail_loc=0`". |
-| **OBD_FAIL_RAND**                       | A flag set on a `fail_loc` breakpoint to cause `OBD_FAIL_CHECK()` to fail randomly; on average every (1 / fail_val) times. |
-| **OBD_FAIL_SKIP**                       | A flag set on a `fail_loc` breakpoint to cause `OBD_FAIL_CHECK()` to succeed `fail_val`times, and then fail permanently or once with `OBD_FAIL_ONCE`. |
-| **OBD_FAIL_SOME**                       | A flag set on `fail_loc` breakpoint to cause `OBD_FAIL_CHECK` to fail `fail_val` times, and then succeed. |
+| **Macro**                                | **Description**                                              |
+| ---------------------------------------- | ------------------------------------------------------------ |
+| **LBUG()**                               | A panic-style assertion in the kernel which causes the Lustre file system to dump its circular log to the `/tmp/lustre-log` file. This file can be retrieved after a reboot. `LBUG()`freezes the thread to allow capture of the panic stack. A system reboot is needed to clear the thread. |
+| **LASSERT()**                            | Validates a given expression as true, otherwise calls LBUG(). The failed expression is printed on the console, although the values that make up the expression are not printed. |
+| **LASSERTF()**                           | Similar to `LASSERT()` but allows a free-format message to be printed, like `printf/printk`. |
+| **CDEBUG()**                             | The basic, most commonly used debug macro that takes just one more argument than standard `printf()` - the debug type. This message adds to the debug log with the debug mask set accordingly. Later, when a user retrieves the log for troubleshooting, they can filter based on this type.                                                                                                                                                   `CDEBUG(D_INFO, "debug message: rc=%d\n", number);` |
+| **CDEBUG_LIMIT()**                       | Behaves similarly to `CDEBUG()`, but rate limits this message when printing to the console (for `D_WARN`, `D_ERROR`, and `D_CONSOLE` message types. This is useful for messages that use a variable debug mask:                                                                                                                                                   `CDEBUG(mask, "maybe bad: rc=%d\n", rc);` |
+| **CERROR()**                             | Internally using `CDEBUG_LIMIT(D_ERROR, ...)`, which unconditionally prints the message in the debug log and to the console. This is appropriate for serious errors or fatal conditions. Messages printed to the console are prefixed with `LustreError:`, and are rate-limited, to avoid flooding the console with duplicates.                                                                                                                                                   `CERROR("Something bad happened: rc=%d\n", rc);` |
+| **CWARN()**                              | Behaves similarly to `CERROR()`, but prefixes the messages with `Lustre:`. This is appropriate for important, but not fatal conditions. Messages printed to the console are rate-limited. |
+| **CNETERR()**                            | Behaves similarly to `CERROR()`, but prints error messages for LNet if `D_NETERR` is set in the `debug` mask. This is appropriate for serious networking errors. Messages printed to the console are rate-limited. |
+| **DEBUG_REQ()**                          | Prints information about the given `ptlrpc_request` structure.                                                                                                                                                   `DEBUG_REQ(D_RPCTRACE, req, ""Handled RPC: rc=%d\n", rc);` |
+| **ENTRY**                                | Add messages to the entry of a function to aid in call tracing (takes no arguments). When using these macros, cover all exit conditions with a single `EXIT`, `GOTO()`, or `RETURN()` macro to avoid confusion when the debug log reports that a function was entered, but never exited. |
+| **EXIT**                                 | Mark the exit of a function, to match `ENTRY` (takes no arguments). |
+| **GOTO()**                               | Mark when code jumps via `goto` to the end of a function, to match `ENTRY`, and prints out the goto label and function return code in signed and unsigned decimal, and hexadecimal format. |
+| **RETURN()**                             | Mark the exit of a function, to match `ENTRY`, and prints out the function return code in signed and unsigned decimal, and hexadecimal format. |
+| **LDLM_DEBUG()** **LDLM_DEBUG_NOLOCK()** | Used when tracing LDLM locking operations. These macros build a thin trace that shows the locking requests on a node, and can also be linked across the client and server node using the printed lock handles. |
+| **OBD_FAIL_CHECK()**                     | Allows insertion of failure points into the Lustre source code. This is useful to generate regression tests that can hit a very specific sequence of events. This works in conjunction with "`lctl set_param fail_loc=*fail_loc*`" to set a specific failure point for which a given `OBD_FAIL_CHECK()` will test. |
+| **OBD_FAIL_TIMEOUT()**                   | Similar to `OBD_FAIL_CHECK()`. Useful to simulate hung, blocked or busy processes or network devices. If the given `fail_loc` is hit, `OBD_FAIL_TIMEOUT()` waits for the specified number of seconds. |
+| **OBD_RACE()**                           | Similar to `OBD_FAIL_CHECK()`. Useful to have multiple processes execute the same code concurrently to provoke locking races. The first process to hit `OBD_RACE()` sleeps until a second process hits `OBD_RACE()`, then both processes continue. |
+| **OBD_FAIL_ONCE**                        | A flag set on a `fail_loc` breakpoint to cause the `OBD_FAIL_CHECK()` condition to be hit only one time. Otherwise, a `fail_loc` is permanent until it is cleared with "`lctl set_param fail_loc=0`". |
+| **OBD_FAIL_RAND**                        | A flag set on a `fail_loc` breakpoint to cause `OBD_FAIL_CHECK()` to fail randomly; on average every (1 / fail_val) times. |
+| **OBD_FAIL_SKIP**                        | A flag set on a `fail_loc` breakpoint to cause `OBD_FAIL_CHECK()` to succeed `fail_val`times, and then fail permanently or once with `OBD_FAIL_ONCE`. |
+| **OBD_FAIL_SOME**                        | A flag set on `fail_loc` breakpoint to cause `OBD_FAIL_CHECK` to fail `fail_val` times, and then succeed. |
 
- Accessing the `ptlrpc` Request History
+
+
+### Accessing the `ptlrpc` Request History
 
 Each service maintains a request history, which can be useful for first occurrence troubleshooting.
 
