--- a/06.02-Lustre Parameters.md
+++ b/06.02-Lustre Parameters.md
@@ -11,7 +11,7 @@ Lustre parameters and statistics files provide an interface to internal data str
 
 Typically, metrics are accessed via `lctl get_param` files and settings are changed by via `lctl set_param`. While it is possible to access parameters in `/proc` and `/sys` directly, the location of these parameters may change between releases, so it is recommended to always use `lctl` to access the parameters from userspace scripts. Some data is server-only, some data is client-only, and some data is exported from the client to the server and is thus duplicated in both locations.
 
-### Note
+**Note**
 
 In the examples in this chapter, `#` indicates a command is entered as root. Lustre servers are named according to the convention `*fsname*-*MDT|OSTnumber*`. The standard UNIX wildcard designation (*) is used.
 
@@ -907,6 +907,42 @@ Clients that access multiple Lustre file systems must use the same parameter val
 | `at_early_margin`  | Amount of time before the Lustre server sends an early reply (in seconds). Default is 5. |
 | `at_extra`         | Incremental amount of time that a server requests with each early reply (in seconds). The server does not know how much time the RPC will take, so it asks for a fixed value. The default is 30, which provides a balance between sending too many early replies for the same RPC and overestimating the actual completion time.When a server finds a queued request about to time out and needs to send an early reply out, the server adds the `at_extra` value. If the time expires, the Lustre server drops the request, and the client enters recovery status and reconnects to restore the connection to normal status.If you see multiple early replies for the same RPC asking for 30-second increases, change the `at_extra` value to a larger number to cut down on early replies sent and, therefore, network load. |
 | `ldlm_enqueue_min` | Minimum lock enqueue time (in seconds). The default is 100. The time it takes to enqueue a lock, `ldlm_enqueue`, is the maximum of the measured enqueue estimate (influenced by `at_min` and `at_max` parameters), multiplied by a weighting factor and the value of `ldlm_enqueue_min`.Lustre Distributed Lock Manager (LDLM) lock enqueues have a dedicated minimum value for `ldlm_enqueue_min`. Lock enqueue timeouts increase as the measured enqueue times increase (similar to adaptive timeouts). |
+
+#### Interpreting Adaptive Timeout Information
+
+Adaptive timeout information can be obtained via `lctl get_param {osc,mdc}.*.timeouts` files on each client and `lctl get_param {ost,mds}.*.*.timeouts` on each server. To read information from a `timeouts` file, enter a command similar to:
+
+```
+# lctl get_param -n ost.*.ost_io.timeouts
+service : cur 33  worst 34 (at 1193427052, 1600s ago) 1 1 33 2
+```
+
+In this example, the `ost_io` service on this node is currently reporting an estimated RPC service time of 33 seconds. The worst RPC service time was 34 seconds, which occurred 26 minutes ago.
+
+The output also provides a history of service times. Four "bins" of adaptive timeout history are shown, with the maximum RPC time in each bin reported. In both the 0-150s bin and the 150-300s bin, the maximum RPC time was 1. The 300-450s bin shows the worst (maximum) RPC time at 33 seconds, and the 450-600s bin shows a maximum of RPC time of 2 seconds. The estimated service time is the maximum value in the four bins (33 seconds in this example).
+
+Service times (as reported by the servers) are also tracked in the client OBDs, as shown in this example:
+
+```
+# lctl get_param osc.*.timeouts
+last reply : 1193428639, 0d0h00m00s ago
+network    : cur  1 worst  2 (at 1193427053, 0d0h26m26s ago)  1  1  1  1
+portal 6   : cur 33 worst 34 (at 1193427052, 0d0h26m27s ago) 33 33 33  2
+portal 28  : cur  1 worst  1 (at 1193426141, 0d0h41m38s ago)  1  1  1  1
+portal 7   : cur  1 worst  1 (at 1193426141, 0d0h41m38s ago)  1  0  1  1
+portal 17  : cur  1 worst  1 (at 1193426177, 0d0h41m02s ago)  1  0  0  1
+```
+
+In this example, portal 6, the `ost_io` service portal, shows the history of service estimates reported by the portal.
+
+Server statistic files also show the range of estimates including min, max, sum, and sum-squared. For example:
+
+```
+# lctl get_param mdt.*.mdt.stats
+...
+req_timeout               6 samples [sec] 1 10 15 105
+...
+```
 
 ### Setting Static Timeouts
 
