--- a/06.03-User Utilities.md
+++ b/06.03-User Utilities.md
@@ -328,7 +328,7 @@ lfs_migrate [lfs_setstripe_options]
 
 The `lfs_migrate` utility is a tool to assist migration of file data between Lustre OSTs. The utility copies each specified file to a temporary file using supplied `lfs setstripe` options, if any, optionally verifies the file contents have not changed, and then swaps the layout (OST objects) from the temporary file and the original file (for Lustre 2.5 and later), or renames the temporary file to the original filename. This allows the user/administrator to balance space usage between OSTs, or move files off OSTs that are starting to show hardware problems (though are still functional) or will be removed.
 
-### Warning
+**Warning**
 
 For versions of Lustre before 2.5, `lfs_migrate` was not integrated with the MDS at all. That made it UNSAFE for use on files that were being modified by other applications, since the file was migrated through a copy and rename of the file. With Lustre 2.5 and later, the new file layout is swapped with the existing file layout, which ensures that the user-visible inode number is kept, and open file handles and locks on the file are kept.
 
@@ -394,7 +394,7 @@ The `filefrag` utility reports the extent of fragmentation in a given file. The 
 
 In default mode [5], `filefrag` prints the number of physically discontiguous extents in the file. In extent or verbose mode, each extent is printed with details such as the blocks allocated on each OST. For a Lustre file system, the extents are printed in device offset order (i.e. all of the extents for one OST first, then the next OST, etc.), not file logical offset order. If the file logical offset order was used, the Lustre striping would make the output very verbose and difficult to see if there was file fragmentation or not.
 
-### Note
+**Note**
 
 Note that as long as a file has extent lengths of tens of megabytes or more (i.e. *read_bandwidth \* seek_time > extent_length*), the read performance for the file will not be significantly impacted by fragmentation, since file readahead can fully utilize the disk disk bandwidth even with occasional seeks.
 
